--- a/education/md文件/教育的产生与发展.md
+++ b/education/md文件/教育的产生与发展.md
@@ -102,23 +102,23 @@
 
    教育的相对独立性是指**教育具有自身规律**，对社会经济、政治、文化等方面具有**能动作用**。
 
-   - **教育具有自身的质的规定性**
+   **教育具有自身的质的规定性**
 
-     **教育的本质属性是有目的地培养人的社会活动。**
+   - **教育的本质属性是有目的地培养人的社会活动。**
 
-   - **教育具有历史继承性**（不同的社会，教育有相同的特点）
+   **教育具有历史继承性**（不同的社会，教育有相同的特点）
 
-     教育的历史继承性是指每个时代的教育都**与以往的教育有着传承和接续的关系**。
+   - 教育的历史继承性是指每个时代的教育都**与以往的教育有着传承和接续的关系**。
 
-     教育的思想、制度、目标、内容、方法、手段，都是在继承与超越前一社会形态下的教育的基础上产生的。
+   - 教育的思想、制度、目标、内容、方法、手段，都是在继承与超越前一社会形态下的教育的基础上产生的。
 
-   - **教育与生产力和政治经济制度的发展具有不平衡性（不均衡）**
+   **教育与生产力和政治经济制度的发展具有不平衡性（不均衡）**
 
-     教育要先行，需要超前于经济建设，这是由教育本省的规律决定的。
+   - 教育要先行，需要超前于经济建设，这是由教育本省的规律决定的。
 
-     **滞后发展：**教育思想和教育内容**落后于**政治经济制度的发展。
+   - **滞后发展：**教育思想和教育内容**落后于**政治经济制度的发展。
 
-     **超前发展：**人们认识到社会发展规律，根据社会发展的趋势，预见教育的发展方向，在旧政治经济制度下产生**新的**教育思想。
+   - **超前发展：**人们认识到社会发展规律，根据社会发展的趋势，预见教育的发展方向，在旧政治经济制度下产生**新的**教育思想。
 
 4. **教育具有生产性**
 
@@ -137,3 +137,237 @@
 
 
 ### 五、教育的基本功能
+
+教育功能是**教育活动和系统**对**个体发展**和**社会发展**所产生的各种影响和作用。
+
+**个体功能与社会功能**
+
+​		按**教育功能作用的对象**划分
+
+1. **个体功能**
+
+   教育的个体功能也称**教育的本体功能**，指教育对**个体发展**的影响和作用。
+
+2. **社会功能**
+
+   教育的社会功能主要体现在**教育能推动社会发展变迁**和**促进社会流动**两个方面。
+
+   **教育的社会变迁功能**
+
+   - 使人适应社会的发展，推动社会的改革与发展。
+
+   **教育的社会流动功能**
+
+   - 社会成员通过教育，能够在不同的社会区域、社会层次、职业岗位、科层组织之间转换调动。
+
+**正向功能与负向功能**
+
+​		按**教育作用的性质**划分
+
+1. **正向功能**
+
+   教育的**正向功能（积极功能）**指教育**有助于社会进步和个体发展**的积极影响和作用。
+
+2. **负向功能**
+
+   教育的**负向功能（消极功能）**指教育**阻碍社会进步和个体发展**的消极影响和作用。
+
+**显性功能与隐性功能**
+
+​		按**教育功能呈现的形式**划分
+
+1. **显性功能**
+
+   教育活动依照教育目的，在实际运行中所出现的与之吻合的结果。主要标志是**计划性**。
+
+2. **隐性功能**
+
+   **伴随显性教育功能出现**的**非预期且具有较大隐蔽性**的功能。显性功能与隐性功能的区分是**相对的**，和潜在的隐性功能一旦被有意识地开发、利用，就可以转变成显性的教育功能。
+
+   
+
+[返回目录](#教育的产生与发展)
+
+------
+
+
+
+### 六、教育的起源
+
+**神话起源论**
+
+​		关于教育起源的**最古老的观点**。观点认为，教育由人格化的神（上帝或天）创造的。这种观点是错误的、非科学的。
+
+**生物起源论**
+
+​		代表人物有**法国的利托尔塔**、**美国的桑代克**和**英国的沛西·能**。
+
+​		该观点认为人类教育起源于动物界中各类动物的生存本能活动，认为动物界存在教育活动。该观点混淆了动物的本能活动与人类社会教育活动的界限，**否认了教育的社会性**。
+
+**心理起源论**
+
+​		代表人物美国教育学家孟禄。
+
+​		该观点认为**教育起源于儿童对成人的无意识模仿**。错误在于把全部教育都归于无意识状态下产生的模仿行为。
+
+**生物起源论**和**心理起源论**共同的缺陷是**都否认了教育的社会属性，否认了教育是一种自觉的有意识的活动**。
+
+**劳动起源论**
+
+​		代表人物有**苏联的米丁斯基**、**凯洛夫**等。
+
+​		该观点认为**教育起源于劳动**。
+
+**交往起源论**
+
+​		代表人物是**叶澜**。
+
+​		该观点认为**教育起源于人类的交往活动**，而不是生产劳动。
+
+
+
+[返回目录](#教育的产生与发展)
+
+------
+
+
+
+### 七、教育的历史发展脉络
+
+**原始社会的教育**
+
+1. **教育的产生**
+
+   **教育产生的原因**
+
+   - **根本原因：**人类对自身生存和发展的需要。（也是教育作为人类社会中具有永恒意义的范畴的根本原因）
+
+   **教育产生的条件**
+
+   - **根本条件：**人类劳动的进行
+
+   - **必要条件：**语言的形成
+
+2. **原始社会教育的特征**
+
+   原始教育没有阶级性
+
+   原始教育主要是为生产劳动服务的
+
+   原始教育是整个社会生产和生活中进行的
+
+   原始教育的教育手段极端原始
+
+**古代社会的教育**
+
+1. **学校的产生**
+
+   一般认为学校产生于奴隶社会时期
+
+2. **中国古代教育的发展**
+
+   |     时期     | 教育(管理)机构                                         | 发展简述                                                     |
+   | :----------: | :----------------------------------------------------- | :----------------------------------------------------------- |
+   | 原始社会末期 | 成均、庠                                               | **古代学校萌芽**                                             |
+   |      夏      | 序、校                                                 | **出现了中国最早的学校教育形态**                             |
+   |      商      | 大学、小学、瞽宗、庠、序                               | 有文字记载同时又有考古出土的实物证实的学校出现在商代         |
+   |     西周     | 国学、乡学                                             | 形成了“学在官府(学术官守)“政教一体”“官师合一”的官学体系格局形成了**以“礼乐”为中心**的文武兼备的**“六艺”教育(礼、乐、射、御、书、数)** |
+   |   春秋战国   | 稷下学宫(战国)                                         | 官学衰微、私学兴起、养士之风大盛，诸子百家争鸣；**私学的发展是我国教育史、文化史上的一个重要里程碑，直接促成了百家争鸣的社会盛况。** |
+   |     两汉     | 太学、鸿都门学、官邸学、地方官学(郡国学校)、书馆、经馆 | 董仲舒提出“罢黜百家，独尊儒术”。太学是当时最高教育机构；鸿都门学是研究文学艺术的专门学校；地方官学的发展始于“文翁兴学” |
+   |     隋唐     | 国子寺(国子监)      “六学二馆”                         | 隋代创立了科举考试制度；唐代建立起完备的官学教育体系——“六学”     (国子学、太学、四门学、律学、书学、算学)、“二馆”(崇文馆、弘文馆) |
+   |      宋      | 国子学与书院                                           | 中央官学包括国子学、太学、辟雍、小学；教育内容：**“四书”“五经”(“四书”为《大学》《中庸》《论语》《孟子》**的合称；**“五经”是《诗》《书》《礼》《易》《春秋》**的合称)；著名的六大书院：白鹿洞书院、石鼓书院、岳麓书院、应天府书院、嵩阳书院、茅山书院 |
+   |      明      | 国子监                                                 | 明朝的国子监在教学制度方面创立历事制度，实行积分法           |
+   |      清      | 学堂                                                   | 废除科举制(1905年)                                           |
+
+3. **国外古代教育的发展**
+
+   **古代印度**
+
+   | 教育形式                                                     | 教育目的                                     |
+   | ------------------------------------------------------------ | -------------------------------------------- |
+   | **婆罗门教育：**婆罗门教的经典**《吠陀》是主要的教育内容，教中的僧侣是唯一的教师**，教育活动主要是**背诵经典和钻研经义** | 宗教权威至高无上，教育控制在**婆罗门**教手中 |
+   | **佛教教育：**教育活动主要是**背诵经典和钻研经义**           | 宗教权威至高无上，教育控制在**佛教**手中     |
+
+   **古代埃及**
+
+   - **教育形式**
+
+     - **宫廷学校：**宫廷学校是法老教育皇子皇孙和贵族子弟的场所
+
+     - **僧侣学校(寺庙学校)：**僧侣学校进行的是较高深的科学教育，重在学术知识的传授和研讨，是传授高深知识的学府
+
+     - **职官学校(书吏学校）：**职官学校用以训练本部门需要的官吏，其教学内容包括普通文化课程及专门职业教育
+
+     - **文士学校：**教育目的是培养熟练运用文字从事书写及计算工作的人
+
+   - **教育特点**
+
+     - **“以僧为师”**、**“以(书)吏为师”** 是古代埃及教育的一大特征
+
+   **古代希腊**
+
+   - **教育形式**
+
+     - **雅典教育：**教育目的是**培养有文化修养和多种才能的政治家和商人**；**在西方最早形成体育、德育、智育、美育和谐发展的教育**，教育 内容比较丰富，教育方法也比较灵活
+
+     - **斯巴达教育：**教育目的是**培养忠于统治阶级的强悍的军人和武士**；**强调军事体育训练(五项竞技——赛跑、跳跃、角力、投标枪、掷铁饼)和政治道德灌输**，教育内容单一，教育方法也比较严厉
+
+   - **教育特点**
+
+     - 不同社会阶层的人受教育的方式不同
+
+   **中世纪的欧洲国家**
+
+   - **教育形式**
+
+     - **教会教育：**教育目的是培养教士和僧侣，教育内容是**“七艺”**，包括**“三科”(文法、修辞、辩证法，也被称为“三艺”)和“四学”(算  术、几何、天文、音乐)**
+
+     - **骑士教育：**教育目的是培养封建骑士，**教育内容是“骑士七技”**，即**骑马、击剑、打猎、投枪、游泳、下棋、吟诗**
+
+   - **教育特点**
+
+     - 欧洲封建社会的教会教育和骑士教育都**脱离了生产劳动**，**为封建地主阶级的统治服务**
+
+4. **古代社会教育的特征**
+
+   古代社会产生了学校，教育成为社会的专门职能，成为**统治阶级的统治工具**
+
+   古代学校教育**与生产劳动相脱离**，具有**非生产性**
+
+   教育具有鲜明的**阶级性**与严格的**等级性**、**宗教性**
+
+   古代学校教育适应古代思想文化的发展，表现出**道统性**、**专制性**、**刻板性**和**象征性**
+
+**近代社会教育的特征**
+
+​		**19世纪以后**的近代教育具有以下特征：
+
+- 国家加强了对教育的重视和干预，公立教育崛起
+- 初等义务教育普遍实施
+- 教育世俗化
+- 重视教育立法，依法治教
+
+**20世纪以后的教育的特征**
+
+1. **教育的终身化**
+
+   **法国的保罗·朗格朗最早系统的论述了终身教育。**
+
+2. **教育的全民化**
+
+3. **教育的民主化**
+
+   对教育的**等级化**、**特权化**和**专制化**的**否定**
+
+4. **教育的多元化**
+
+5. **教育技术的现代化**
+
+   指**现代科学技术**在教育上的运用
+
+
+
+[返回目录](#教育的产生与发展)
+
+------
+
