--- a/education/md文件/教育的产生与发展.md
+++ b/education/md文件/教育的产生与发展.md
@@ -6,7 +6,7 @@
 
 
 
-### 一、教育的概念
+## 一、教育的概念
 
 **由来：**“教育”一词最早出现于《孟子·尽心上》。孟子曰：“得天下英才而教育之。”
 
@@ -24,7 +24,7 @@
 
 
 
-### 二、教育活动的基本要素
+## 二、教育活动的基本要素
 
 **教育者**、**受教育者**和**教育影响**是构成教育活动的基本要素。
 
@@ -48,7 +48,7 @@
 
 
 
-### 三、教育的基本形态
+## 三、教育的基本形态
 
 **家庭教育**、**社会教育**和**学校教育**是教育的**基本形态**。**学校教育占主导地位**。
 
@@ -72,11 +72,11 @@
 
 
 
-### 四、教育的属性（重点）
+## 四、教育的属性（重点）
 
-**教育的本质属性（质的规定性）**
+### （一）教育的本质属性（质的规定性）
 
-​		教育是一种**有目的的培养人**的社会活动，这是教育区别于其他事物现象的根本特征，是教育的**本质属性**，即教育的**质的规定性**。
+教育是一种**有目的的培养人**的社会活动，这是教育区别于其他事物现象的根本特征，是教育的**本质属性**，即教育的**质的规定性**。
 
 1. 教育是**人类所特有**的一种**有意识的社会活动**
 
@@ -88,7 +88,7 @@
 
    教育是以影响和发展人的**身心**为直接目标的。
 
-**教育的社会属性**
+### （二）教育的社会属性
 
 1. **教育具有永恒性**
 
@@ -136,13 +136,13 @@
 
 
 
-### 五、教育的基本功能
+## 五、教育的基本功能
 
 教育功能是**教育活动和系统**对**个体发展**和**社会发展**所产生的各种影响和作用。
 
-**个体功能与社会功能**
+### （一）个体功能与社会功能
 
-​		按**教育功能作用的对象**划分
+按**教育功能作用的对象**划分
 
 1. **个体功能**
 
@@ -160,9 +160,9 @@
 
    - 社会成员通过教育，能够在不同的社会区域、社会层次、职业岗位、科层组织之间转换调动。
 
-**正向功能与负向功能**
+### （二）正向功能与负向功能
 
-​		按**教育作用的性质**划分
+按**教育作用的性质**划分
 
 1. **正向功能**
 
@@ -172,9 +172,9 @@
 
    教育的**负向功能（消极功能）**指教育**阻碍社会进步和个体发展**的消极影响和作用。
 
-**显性功能与隐性功能**
+### （三）显性功能与隐性功能
 
-​		按**教育功能呈现的形式**划分
+按**教育功能呈现的形式**划分
 
 1. **显性功能**
 
@@ -192,7 +192,7 @@
 
 
 
-### 六、教育的起源
+## 六、教育的起源
 
 **神话起源论**
 
@@ -232,9 +232,9 @@
 
 
 
-### 七、教育的历史发展脉络
+## 七、教育的历史发展脉络
 
-**原始社会的教育**
+### （一）原始社会的教育
 
 1. **教育的产生**
 
@@ -258,7 +258,7 @@
 
    原始教育的教育手段极端原始
 
-**古代社会的教育**
+### （二）古代社会的教育
 
 1. **学校的产生**
 
@@ -291,43 +291,42 @@
    **古代埃及**
 
    - **教育形式**
-
-     - **宫廷学校：**宫廷学校是法老教育皇子皇孙和贵族子弟的场所
-
-     - **僧侣学校(寺庙学校)：**僧侣学校进行的是较高深的科学教育，重在学术知识的传授和研讨，是传授高深知识的学府
-
-     - **职官学校(书吏学校）：**职官学校用以训练本部门需要的官吏，其教学内容包括普通文化课程及专门职业教育
-
-     - **文士学校：**教育目的是培养熟练运用文字从事书写及计算工作的人
-
-   - **教育特点**
-
-     - **“以僧为师”**、**“以(书)吏为师”** 是古代埃及教育的一大特征
-
-   **古代希腊**
-
-   - **教育形式**
-
-     - **雅典教育：**教育目的是**培养有文化修养和多种才能的政治家和商人**；**在西方最早形成体育、德育、智育、美育和谐发展的教育**，教育 内容比较丰富，教育方法也比较灵活
-
-     - **斯巴达教育：**教育目的是**培养忠于统治阶级的强悍的军人和武士**；**强调军事体育训练(五项竞技——赛跑、跳跃、角力、投标枪、掷铁饼)和政治道德灌输**，教育内容单一，教育方法也比较严厉
-
-   - **教育特点**
-
-     - 不同社会阶层的人受教育的方式不同
-
-   **中世纪的欧洲国家**
-
-   - **教育形式**
-
-     - **教会教育：**教育目的是培养教士和僧侣，教育内容是**“七艺”**，包括**“三科”(文法、修辞、辩证法，也被称为“三艺”)和“四学”(算  术、几何、天文、音乐)**
-
-     - **骑士教育：**教育目的是培养封建骑士，**教育内容是“骑士七技”**，即**骑马、击剑、打猎、投枪、游泳、下棋、吟诗**
-
-   - **教育特点**
-
-     - 欧洲封建社会的教会教育和骑士教育都**脱离了生产劳动**，**为封建地主阶级的统治服务**
-
+- **宫廷学校：**宫廷学校是法老教育皇子皇孙和贵族子弟的场所
+     
+- **僧侣学校(寺庙学校)：**僧侣学校进行的是较高深的科学教育，重在学术知识的传授和研讨，是传授高深知识的学府
+     
+- **职官学校(书吏学校）：**职官学校用以训练本部门需要的官吏，其教学内容包括普通文化课程及专门职业教育
+     
+- **文士学校：**教育目的是培养熟练运用文字从事书写及计算工作的人
+     
+- **教育特点**
+   
+  - **“以僧为师”**、**“以(书)吏为师”** 是古代埃及教育的一大特征
+   
+**古代希腊**
+   
+- **教育形式**
+   
+  - **雅典教育：**教育目的是**培养有文化修养和多种才能的政治家和商人**；**在西方最早形成体育、德育、智育、美育和谐发展的教育**，教育 内容比较丰富，教育方法也比较灵活
+   
+  - **斯巴达教育：**教育目的是**培养忠于统治阶级的强悍的军人和武士**；**强调军事体育训练(五项竞技——赛跑、跳跃、角力、投标枪、掷铁饼)和政治道德灌输**，教育内容单一，教育方法也比较严厉
+   
+- **教育特点**
+   
+  - 不同社会阶层的人受教育的方式不同
+   
+**中世纪的欧洲国家**
+   
+- **教育形式**
+   
+  - **教会教育：**教育目的是培养教士和僧侣，教育内容是**“七艺”**，包括**“三科”(文法、修辞、辩证法，也被称为“三艺”)和“四学”(算  术、几何、天文、音乐)**
+   
+  - **骑士教育：**教育目的是培养封建骑士，**教育内容是“骑士七技”**，即**骑马、击剑、打猎、投枪、游泳、下棋、吟诗**
+   
+- **教育特点**
+   
+  - 欧洲封建社会的教会教育和骑士教育都**脱离了生产劳动**，**为封建地主阶级的统治服务**
+   
 4. **古代社会教育的特征**
 
    古代社会产生了学校，教育成为社会的专门职能，成为**统治阶级的统治工具**
@@ -338,16 +337,16 @@
 
    古代学校教育适应古代思想文化的发展，表现出**道统性**、**专制性**、**刻板性**和**象征性**
 
-**近代社会教育的特征**
+### （三）近代社会教育的特征
 
-​		**19世纪以后**的近代教育具有以下特征：
+**19世纪以后**的近代教育具有以下特征：
 
 - 国家加强了对教育的重视和干预，公立教育崛起
 - 初等义务教育普遍实施
 - 教育世俗化
 - 重视教育立法，依法治教
 
-**20世纪以后的教育的特征**
+### （四）20世纪以后的教育的特征
 
 1. **教育的终身化**
 
