--- a/education/md文件/教育学的产生与发展.md
+++ b/education/md文件/教育学的产生与发展.md
@@ -60,4 +60,254 @@
 2. **《学记》中的教育思想**
 
    《学记》是**人类历史上最早出现的专门论述教育问题的著作**，成文大约在战国末期。
+   
+   **教育的功能**
+   
+   | 原文                                                         | 释义                                                         | 教育思想                                 |
+   | ------------------------------------------------------------ | ------------------------------------------------------------ | ---------------------------------------- |
+   | **“君子如欲化民成俗，其必由学乎”<br/>“是故古之王者建国君民，教学为先”** | 君子如果要教化百姓，形成良好的风俗习惯，一定要从教育人手<br/>因此古代的帝王在建设国家和统治人民方面，都是把教育和学习放在首位 | 揭示了**教育的重要性和教育与政治的关系** |
+   | “玉不琢，不成器；人不学，不知道”                             | 玉石不经雕琢，就不能成为玉器；人不经过学习，就不能明白道理   | 揭示了**教育的个体功能**                 |
+   
+   **藏息相辅**
+   
+   | 原文                                                         | 释义                                                         | 教育思想                                                 |
+   | ------------------------------------------------------------ | ------------------------------------------------------------ | -------------------------------------------------------- |
+   | “大学之教也，时教必有正业，退息必有居学”<br/>“故君子之于学也，藏焉修焉，息焉游焉” | 大学教学，按照时序进行，必须有正式的课业，课后休息时也得有课外练习<br/>所以，善于学习的人，学习的时候努力进修，休息的时候尽情玩弄杂艺 | 强调正课学习与课外练习相互结合，相互补充   **课内+课外** |
+   
+   **豫时孙摩**
+   
+   | 原文                                                         | 释义                                                         | 教育思想                                                     |
+   | ------------------------------------------------------------ | ------------------------------------------------------------ | ------------------------------------------------------------ |
+   | “大学之法，禁于未发之谓豫，当其可之谓时，不陵节而施之谓孙，相观而善之谓摩” | 大学的教育方法，在不合正道的事发生之前加以禁止，叫作预先防备；在适当的时候加以教导，叫作合乎时宜；不超过学生的接受能力进行教导，叫作顺应；使学生相互学习、取长补短，叫作观摩 | “当其可之谓时”表明教育有关键期和最佳期：“不陵节而施”符合人的身心发展的顺序性规律，遵循了**循序渐进的教学原则** |
+   
+   **启发诱导**
+   
+   | 原文                                                 | 释义                                                         | 教育思想                 |
+   | ---------------------------------------------------- | ------------------------------------------------------------ | ------------------------ |
+   | **“故君子之教，喻也。道而弗牵，强而弗抑，开而弗达“** | 所以优秀的教师是善于通过启发诱导进行教育的。 要引导学生，但决不牵着学生的鼻子；要严格要求学生，但决不使学生感到压抑；要在问题开头启发学生思考，决不把最终结果呈现给学生 | 体现了**启发式教学思想** |
+   
+   **长善救失**
+   
+   | 原文                       | 释义                                                   | 教育思想                   |
+   | -------------------------- | ------------------------------------------------------ | -------------------------- |
+   | “教也者，长善而救其失者也“ | 教师，就是**发扬学生的优点，并且纠正他们各自缺点的人** | 与长善救失的德育原则相一致 |
+   
+   **学不躐（lie）等**
+   
+   | 原文                       | 释义                                               | 教育思想                   |
+   | -------------------------- | -------------------------------------------------- | -------------------------- |
+   | “幼者听而弗问，学不躐等也” | 年幼的学生只听老师讲解而不随便发问，学习不逾越次第 | 与循序渐进的教学原则相一致 |
+   
+   **尊师重道**
+   
+   | 原文                             | 释义                                                         | 教育思想                                 |
+   | -------------------------------- | ------------------------------------------------------------ | ---------------------------------------- |
+   | “师严然后道尊，道尊然后民知敬学” | 教师受到尊敬，然后真理学问才会受到敬重。 真理学问受到尊敬，然后人民才会敬重学问 | 高度评价教师的作用，体现了教师的社会地位 |
+   
+   **教学相长（最早出现于《学记》）**
+   
+   | 原文                                                         | 释义                                                         | 教育思想                                       |
+   | ------------------------------------------------------------ | ------------------------------------------------------------ | ---------------------------------------------- |
+   | “是故学然后知不足，教然后知困。知不足，然后能自反也；知困，然后能自强也。故曰：教学相长也” | 因此学习后才知道自己的不足，教导人后才知道自己的困惑。知道不足，然后能自我检查，对自己提出要求；知道困惑，然后能鞭策自己努力进修。所以说**教与学是互相促进的**。 | 与我国提倡的“教学相长”的**新型师生关系**相一致 |
+   
+3. **中国古代其他教育家的思想**
+
+   **孟子**
+
+   ​		提出**“性善论”**，认为教育的目的是**“明人伦”**
+
+   **荀子**
+
+   ​		提出**“性恶论”**，认为人们善良的行为是后天作用的结果。**强调尊师**
+
+   **墨子**
+
+   ​		认为获得知识的途径主要有**“亲知”**、**“闻知”**、**“说知”**三种。
+
+   **朱嘉**
+
+   ​		提出“朱子读书法”，即**循序渐进**、熟读精思、虚心涵泳、切己体察、着紧用力、居敬持志
+
+   **韩愈**
+
+   ​		著有《师说》，提出“古之学者必有师。师者，所以传道受业解惑也”。
+
+### （二）西方的教育思想
+
+1. **苏格拉底的教育思想**
+
+   苏格拉底以其雄辩和青年智者的问答法闻名于世，问答法又称**“产婆术”**。“产婆术”分为四步，即**讽刺**、**助产术**、**归纳**和**定义**。
+
+2. **柏拉图的教育思想**
+
+   代表作《理想国》。认为教育的最高目标是培养哲学家兼政治家，最终目标是促进“灵魂转向”；女子应当和男子接受同样的教育，从事同样的职业；重视早期教育。
+
+3. **亚里士多德的教育思想**
+
+   **首次**提出了**“教育遵循自然”**的观点，**最早**提出了**自由教育（文雅教育）**。他认为，要实施自由教育，必须具备两个条件：一是闲暇时间，二是自由学科。
+
+4. **昆体良的教育思想**
+
+   **古罗马的昆体良**是西方教育史上第一个专门论述教育问题的教育家。他的**《雄辩术原理》**（又译**《论演说家的教育》**或**《论演说家的培养》**）是**西方第一本教育专著**。（国外最早的教育学著作）
+
+
+
+[返回目录](#教育学的产生与发展)
+
+------
+
+
+
+## 三、教育学的独立形态阶段
+
+**17世纪以后**，教育学主键发展为一门独立的学科。
+
+1. **培根的教育思想**
+
+   被称为"近代实验科学的鼻祖"，在**1623年**出版的**《论科学的价值和发展》**中，**首次**提出把**教育学作为一门独立的学科**。
+
+2. **夸美纽斯的教育思想**
+
+   **捷克**著名教育家**夸美纽斯**被誉为**“教育学之父”**。赞誉教师是“太阳底下最光辉的职业”。**1632年**出版**《大教学论》**是教**育开始形成一门独立学科的标志**。被认为是**近代第一本教育学著作**。
+
+   **教学原则**
+
+   - **适应自然**。这是一条贯穿他的整个教育体系的**根本性指导原则**。具体的**教学原则**：**直观性原则**、**系统性原则**、**量力性原则**、**巩固性原则**等。**第一次从理论上对直观性原则做了论证**。
+
+   **教学组织**（重点）
+
+   - 在**《大教学论》**中**首次从理论上系统的论述了班级授课制**，奠定了**班级授课制的理论基础**。
+
+   **教学思想**（重点）
+
+   - 从他的民主主义的**“泛智”**思想出发，认为**“一切男女青年都应该进学校”**。他认为，**教育的艺术**就是**“把一切事物教给一切人类的全部艺术”**，为此编写了很多教材，如**《世界图解》《母育学校》**等。
+
+3. **卢梭的教育思想**
+
+   卢梭是法国启蒙主义思想家、教育家，被认为“最先发现了儿童”。倡导自然教育和儿童本位的教育观。**1962**年发表教育著作**《爱弥儿》**，系统的阐述了**自然主义教育思想**。
+
+4. **康德的教育思想**
+
+   康德**最早**将**教育学作为一门学科在大学中讲授**，其教育思想集中体现在**《康德论教育》**中。他认为**教育的根本任务在于充分发展人的自然天赋**。
+
+5. **裴斯泰洛齐的教育思想**
+
+   **瑞士著名教育家**。西方教育史上**第一位**明确提出**“教育心理化”**主张的教育家，**第一位**将**“教育与生产劳动相结合”**这一思想**付诸实践的教育家**。
+
+6. **洛克的教育思想**
+
+   英国哲学家，代表作**《教育漫画》**。
+
+   - 提出“白板说”。认为人的发展完全由教育决定。
+   - 主张绅士教育
+
+7. **赫尔巴特的教育思想**（重点）
+
+   **1806年**，赫尔巴特的**《普通教育学》**的出版**标志着教育学作为一门规范、独立的学科正式诞生**。这本书被认为是**第一本现代教育学著作**。赫尔巴特被誉为**“现代教育学之父”、“科学教育学的奠基人”**。
+
+   - 首次试图把教育学建立在心理学和伦理学的基础之上，奠定了科学教育学的基础。
+   - **三中心论：**“课堂中心”、“教材中心”、“教师中心”。
+   - 提出**“四阶段教学”**理论。把**教学过程分为明了（清楚）、联合（联想）、系统和方法四个阶段**。
+   - **提出教育性教学原则**。在西方史上，**第一次提出“教育性教学”的概念**。
+   - 认为教育的最高目的是道德和性格的完善。
+
+
+
+[返回目录](#教育学的产生与发展)
+
+------
+
+
+
+## 四、教育学发展的多样化阶段
+
+1. **斯宾塞的教育思想**
+
+   代表作《教育论》。斯宾塞是**实证主义者**，反对思辨，主张**科学是对经验事实的描写和记录**。他提出**教育的任务是为完美生活做准备**，**反对形式教育**，**重视实科教育**。
+
+2. **梅伊曼与拉伊的教育思想**
+
+   1901年，德国的梅伊曼提出“实验教育学”这一术语。认为必须采用实验的方法研究儿童的生活和学习。
+
+   1908年，德国的拉伊出版《实验教育学》。认为教育就是对人的发展的实际指导，目的是造就完整的生物——社会中完整的个性
+
+3. **杜威的教育思想**
+
+   美国教育学家，实用主义哲学的创始人，**实用主义教育学的代表人物之一**。代表作包括《民主主义教育》（又译《民本主义与教育》）、《我的教育信条》等。
+
+   提出**“新三中心论”**：**“儿童中心（学生中心）”**、**“活动中心”**、**“经验中心”**		（旧三中心论：“课堂中心”、“教材中心”、“教师中心”）
+
+   **主要观点：**
+
+   - **论教育的本质**
+
+     ​		**教育即生活**，**教育即生长**，**教育即经验的改组或改造**，**“学校即社会”**
+
+   - **论教育的目的**
+
+     ​		**教育无目的论**
+
+   - **“从做中学”**
+
+   - **“五步探究教学法”**    
+
+4. **克鲁普斯卡娅的教育思想**
+
+   最早**以马克思主义为基础**，探讨教育问题的**苏联教育家**。代表作《国民教育与民主主义》
+
+5. **凯洛夫的教育思想**
+
+   **苏联**凯洛夫主编的**《教育学》**，被公认为世界上**第一部马克思主义的教育学著作**，对我国教育有着广泛的影响。
+
+6. **马卡连柯的教育思想**
+
+   苏联的马卡连柯著有**《教育诗》**、**《父母必读》**、**《论共产主义教育》**，其核心思想是**集体主义思想**。
+
+7. **杨贤江的教育思想**
+
+   编写的**《新教育大纲》是我国第一部以马克思主义为指导的教育学著作**。
+
+
+
+[返回目录](#教育学的产生与发展)
+
+------
+
+
+
+## 五、教育学的理论深化阶段
+
+1. **布卢姆的教育思想**（掌握目标）
+
+   美国教育学家，又译布鲁姆，提出**掌握学习理论**，著有《教育目标分类学》等著作。把教学目标分为**认知**、**情感**和**动作技能**三大领域，认为教学应该以掌握学习为指导思想、以教育目标为导向、以教育评价为调控手段。
+
+2. **布鲁纳的教育思想**（发现学习，结构中心）
+
+   美国教育学家，著有**《教育过程》**，认为**学科结构要与儿童的认知相适应**，**重视学生能力的培养**，**提倡发现学习**。
+
+3. **赞可夫的教育思想（教学与发展理论）**
+
+   苏联教育家，又译赞科夫，著有**《教学与发展》**，该书的理论核心是**“以最好的教学效果使学生达到最理想的发展水平”**。
+
+4. **瓦根舍因的教育思想**
+
+   **著有《范例教学原理》，创立了范例教学理论**。
+
+5. **皮亚杰的教育思想**
+
+   瑞士教育家，著有《教育科学与儿童心理学》，**论述了智力发展的阶段**。
+
+6. 苏霍姆林斯基的教育思想
+
+   论述了**“个性全面和谐发展”**的教育思想。他的著作被称为**“活的教育学”、“学校生活的百科全书”**
+
+7. **巴班斯基的教育思想（优化）**
+
+   苏联教育家，著有**《教学过程最优化》**，将**系统论**的方法引入教学改革，提出了**教学过程最优化理论**。
+
+
+
+[返回目录](#教育学的产生与发展)
+
+------
 
