--- a/education/md文件/教育与社会的发展.md
+++ b/education/md文件/教育与社会的发展.md
@@ -1,6 +1,152 @@
 # 教育与社会的发展
 
+[TOC]
+
 
 
 ## 一、教育与人口的关系
+
+### （一）人口对教育的制约与影响
+
+1. **人口数量影响教规模、结构和质量**
+
+2. **人口质量影响教育质量**
+
+   人口质量指人口的身体素质、文化修养和道德水平
+
+3. **人口结构影响教育结构**
+
+   人口结构包括自然结构和社会结构。自然结构指人口的年龄、性别等；社会结构指人口的阶级、文化、职业、地域、民族等。**人口的社会结构对教育的影响更显著**。
+
+### （二）教育对人口的作用（教育的人口功能）
+
+1. **教育可以控制人口数量**
+
+   教育有助于人们树立新的社会价值观和婚姻观，有助于人们接受人口教育，从而控制人口数量。
+
+2. **教育可以提高人口素质**
+
+3. **教育可以改善人口结构**
+
+   教育可以改善人口的自然结构和社会结构。例如，有助于解决性别比例失调等问题，有助于改变城乡人口比例。
+
+
+
+[返回目录](#教育与社会的发展)
+
+------
+
+
+
+## 二、教育与社会生产力的关系（重点）
+
+**大致相当/一致**
+
+### （一）生产力对教育的制约作用
+
+生产力水平是教育发展水平的**直接**和**最终决定性**因素。教育的发展归根结底由生产力水平决定。
+
+1. **生产力的发展水平制约教育发展的规模和速度**（块、慢、普及程度）
+
+2. **生产力的发展水平制约教育结构和人才培养规格**
+
+   教育结构，即教育机构总体的**各部分的比例关系**（各级各类学校）及组合方式
+
+3. 生产力的发展水平制约**教学内容、教学方法、教学手段和教学组织形式**的变革
+
+### （二）教育对生产力的促进作用（教育的经济功能）
+
+生产力对教育有制约作用，教育对生产力具有**促进作用**（促进作用==反作用）
+
+1. **教育再生产劳动力**
+
+   教育使**潜在的生产力转化为现实的生产力**
+
+   教育可以**提高劳动力的质量和素质**
+
+   教育可以**改变劳动力的形态**，**把简单劳动力训练成复杂劳动力**
+
+   教育可以使劳动力得到全面发展，提高劳动转换能力，摆脱现代分工造成的每个人的**片面性**。
+
+   20世纪60年代，以美国的**舒尔茨**为代表的西方经济学家提出了**人力资本理论（表达了教育的经济功能）**，说明了**教育对经济发展的促进作用**。
+
+2. **教育再生产科学知识**
+
+   **科学技术知识的再生产**有多种途径，其中**最主要的途径是学校教育**。
+
+
+
+[返回目录](#教育与社会的发展)
+
+------
+
+
+
+## 三、教育与社会政治经济制度的关系
+
+### （一）政治经济制度对教育的制约作用
+
+政治经济制度**决定教育的性质**，即政治经济制度**决定着教育的思想政治方向和为谁服务的问题**，但并非决定教育的一切。
+
+1. **政治经济制度决定教育的领导权**
+2. **政治经济制度决定受教育权**
+3. **政治经济制度制约教育目的的性质和思想道德教育的内容**
+4. **政治经济制度决定教育体制**
+
+### （二）教育对政治经济制度的影响作用（教育的政治功能）
+
+1. **教育为政治经济制度培养所需要的人才**
+
+   教育通过培养人才实现对政治经济制度的影响，是教育作用于政治经济制度的**主要途径**。
+
+   教育通过**促进个体社会化**来为一定的政治经济制度服务。
+
+2. **教育可以促进民主**
+
+   一个国家民主程度直接取决于国家的政体，但又**间接取决于这个国家人民的文化程度、教育事业的发展程度**。
+
+3. **教育是一种可以影响政治经济制度的舆论力量**
+
+   可以通过在校师生的言论行动、学校教材和刊物，向社会宣传一定的思想意识，服务于一定政治经济制度。
+
+**教育对政治经济制度并不起决定作用。教育不能改变政治经济制度的发展方向。教育也不能成为决定政治经济制度发展的根本动力。**
+
+
+
+[返回目录](#教育与社会的发展)
+
+------
+
+
+
+## 四、教育与文化的关系
+
+### （一）文化对教育发展的制约作用
+
+1. **文化影响教育的价值取向**
+
+   价值取向是文化的核心内容。文化对教育的价值取向既有积极影响，又有消极影响。
+
+2. **文化影响教育目的的确立**
+
+3. **文化影响教育教育内容的选择**
+
+   教育的内容是人类的文化。不同时期和不同民族的文化，影响着教育内容的选择。文化影响者教育内容的选择，表现在影响教育内容的选择范围、选择倾向性等方面。
+
+4. **文化影响教育方法的使用**
+
+   不同文化影响人们对知识的认识，影响人们的思考方式。在教育上表现为影响教师对知识的传授方式以及对教育方法的选择和应用。
+
+### （二）教育对文化发展的促进作用（教育的文化功能）
+
+1. **教育具有传递和保存文化的作用**
+2. **教育具有传播和交流文化的作用**
+3. **教育具有选择和提升文化的作用**
+4. **教育具有更新和创造文化的作用**
+
+
+
+[返回目录](#教育与社会的发展)
+
+------
 
