--- a/education/md文件/教育与人的发展.md
+++ b/education/md文件/教育与人的发展.md
@@ -1,1 +1,286 @@
 # 教育与人的发展（重点）
+
+[TOC]
+
+
+
+## 一、人的发展的概念
+
+人的发展指作为复杂整体的个体从生命开始到生命结束的全部人生中，不断变化的过程，**特别指个体身心特点向积极方向变化的过程**。**人的发展包括们生理的发展和心理的发展。**
+
+
+
+[返回目录](#教育与人的发展（重点）)
+
+------
+
+
+
+## 二、青春期的生理发展
+
+青春期是个体生长发育的第二个高峰期。其生理发展主要体现在**身体外形的变化**、**体内机能的增强**以及**性的发育和成熟**三个方面。
+
+
+
+[返回目录](#教育与人的发展（重点）)
+
+------
+
+
+
+## 三、人的发展规律
+
+### （一）顺序性
+
+1. **顺序性的概念**
+
+   人的身心发展是一个有顺序的、持续不断的发展过程。儿童出生到成人，他们的身心发展是一个**由低级到高级**、**由量变到质变**的连续不断的发展过程。
+
+2. **教育要求**
+
+   对青少年进行教育时，必须**遵守由具体到抽象、由深入浅、由简到繁、由低级到高级的顺序**，**循序渐进**，不能“揠苗助长”、“凌节而施”。
+
+### （二）阶段性
+
+1. **阶段性的概念**
+
+   人的发展变化既体现出量的积累，又表现出质的飞跃。**出现质的飞跃，从而表现出发展的阶段性**。**人在不同的年龄阶段面对不同的发展任务。**
+
+   例如：
+
+   - 童年期学生的思维特点是具有较大的具体性和形象性，抽象思维弱，对抽象的道理不易理解。
+   - 少年期的学生，抽象思维已经有了很大的发展，但经常需要具体的感性经验做支持。
+   - **根据少年期儿童的总体性的阶段特征，心理学家把少年期称为“危险期”或“心理断乳期”**
+
+2. **教育要求**
+
+   人的发展的阶段性要求**教育要有针对性**，**不能搞“一刀切”**。在教育中，教育者要从教育对象的实际出发，针对不同年龄阶段的学生，提出不同的教育任务，采用不同的教育内容和方法。
+
+### （三）不平衡性
+
+1. **不平衡性的概念**
+
+   个体身心发展的**同一方面**在**不同的年龄阶段**的发展速度不平衡。
+
+   个体身心发展的**不同方面**在**不同的年龄阶段**的发展速度不平衡。
+
+2. **教育要求**
+
+   **教育教学要抓住关键期。**关键期是身体或心理的某一方面机能和能力最适于形成的时期。在这个时期内，个体对某种刺激特别敏感，过了这个时期，同样的刺激则影响很小或没有影响。
+
+### （四）互补性
+
+1. **互补性的概念**
+
+   互补性反应个体身心发展各组成部分的相互关系。
+
+2. **教育要求**
+
+   人的发展的互补性要求教育要**结合学生实际，扬长避短、长善救失，注重发现学生的自身优势，促进学生的个性化发展**。
+
+### （五）个别差异性
+
+1. **个别差异性的概念**
+
+   个别差异性是指个体之间的身心发展以及个体身心发展的不同方面之间，存在着发展程度和速度的不同。
+
+   从个体角度看，个别差异性表现在身心的所有构成方面。**如有的人“聪明早慧”，有的人“大器晚成”。**
+
+   从群体角度看，个别差异性主要表现为男女性别的差异，不仅是自然性上的差异，还包括由性别带来的生理机能和的和会地位、角色、交往群体的差异。
+
+2. **教育要求**
+
+   人的发展的个别差异性要求**教育要因材施教**。教师必须要深入了解学生，针对学生不同的发展水平以及兴趣爱好和特长**因材施教，引导学生扬长避短、发展个性，促进学生的自由发展**。
+
+### （六）整体性
+
+1. **整体性概念**
+
+   人的生理、心理和社会性等方面的发展是密切联系在一起的，**在人的发展过程中相互作用**，使人的发展表现出明显的整体性。某一方面的变化必然引起其他方面以及人的整体发生变化；反过来，人的整体变化也必然影响各个方面的变化。
+
+2. **教育要求**
+
+   要求教育**把学生看作复杂的整体**，**促进学生全面发展**，把学生培养成完整和完善的人。
+
+### 备考锦囊
+
+（1）顺序性——要循序渐进，不能“揠苗助长”、“凌节而施”
+
+（2）阶段性——要有针对性，不能“一刀切”
+
+（3）不平衡性——要把握关键期，适时而教
+
+（4）互补性——要扬长避短，长善救失
+
+（5）个别差异性——要因材施教
+
+（6）整体性——要把学生看作复杂的整体
+
+
+
+[返回目录](#教育与人的发展（重点）)
+
+------
+
+
+
+## 四、个体身心发展的动因
+
+### （一）内发论（遗传决定论）
+
+**内发论强调遗传在人的发展中的决定作用**
+
+春秋时期，孔子把人分为四等：**“生而知之者，上也；学而知之者，次也；困而学之，又其次也；困而不学，民斯为下矣。”**他认为**“唯上智与下愚不移”**。
+
+内发论的主要代表人物及观点如下：
+
+- 孟子，主张“性善论”，提出“仁义礼智，非由外铄我也，我固有之也”。
+- 霍尔，**“一两的遗传胜过一顿的教育”**。
+- 威尔逊，把“基因复制”看作决定人的一切行为的本质力量。
+- 格赛尔，提出“成熟势力说”，认为成熟机制对人的发展其决定作用。
+- 费罗伊德，认为人的性本能是最基本的自然本能，是推动人发展的根本动因。
+- 高尔顿，“优学生”的代表人物。
+
+### （二）外铄论（环境决定论）
+
+**外铄论认为人的发展主要依靠外在力量。**
+
+外铄论的主要代表人物及观点如下：
+
+- 荀子，提出“人之性恶，其善者伪也”，认为人们善良的行为是后天作用的结果。
+- 洛克，**提出“白板说”**
+- 华生，提出了**“给我一打健康的婴儿，不管他们的祖先状况如何，我可以任意把他们培养成领袖到小偷各种类型的人”**的著名论断。
+- 斯金纳，继承华生的观点
+
+### （三）多因素相互作用论
+
+辩证唯物主义认为，人的发展是**个体的内在因素**（如先天的遗传物质、机体成熟的机制）与**外部环境**（外在刺激的强度、社会发展的水平、个体的文化背景等）在个体活动中**相互作用的结果**。
+
+
+
+[返回目录](#教育与人的发展（重点）)
+
+------
+
+
+
+## 五、影响人发展的主要因素（重点）
+
+### （一）遗传物质（遗传）——生理前提
+
+**物质前提，内因**
+
+1. **遗传素质为人的身心发展提供了生理前提，使人的发展成为可能**（可能性）
+
+   遗传素质是人赖以发展的**物质基础和自然条件**，是人身心发展的**生理前提**，为人的发展提供了**可能性**。
+
+2. **遗传素质的成熟程度制约着人的发展过程及其阶段**
+
+   例如，让6个月的婴儿学走路，不但是徒劳的，而且是无益的。**遗传素质的成熟程度制约着身心发展的程度和特点，只有当个体的身心发展达到了一定的水平，个体才具有学习一定知识与技能的条件与可能性。**
+
+3. **遗传素质的差异性对人的发展有一定的影响**
+
+   这种差异表现在体态、肤色、感官上，也表现在神经活动的类型上。
+
+4. **遗传素质具有可塑性**（会出辨析题）
+
+   **越来越好**或**越来越差**
+
+   **随着环境、教育和实践活动的作用和训练，人的遗传素质会逐渐地发生变化，**这说明人的遗传素质具有可塑性。
+
+   **尽管遗传素质对人的发展有重要作用，但它不能决定人的发展。**不能片面的夸大遗传素质的作用。遗传素质对人的发展的作用**只有通过环境、教育和个人的主观能动性才能转变为现实**。例子：《伤仲永》、“狼孩”。
+
+### （二）环境——现实基础（现实性）
+
+**孟子提出“染于苍则苍，染于黄则黄”**
+
+《荀子·劝学》中提出**“蓬生麻中，不扶而直；白沙在涅，与之俱黑”**
+
+**孟母三迁**
+
+1. **环境为人的发展提供了现实条件**
+
+   人总在一定环境的影响下发展，获得一定的生活知识和经验，形成各种思想意识和行为习惯。
+
+2. **环境从总体上制约着人的发展状态**
+
+   **社会生产力的发展水平决定着人的发展程度和范围**
+
+   **社会关系影响着人的发展的方向和性质**
+
+   **社会意识形态影响着人的发展内容**
+
+3. **环境对人的发展的作用方式是不同的**
+
+   根据**人的主动性发挥的程度**，环境对人的发展的作用方式可分为**被动接受**和**主动选择**。
+
+   环境对人的发展的作用**首先是一个被动接受的过程**。
+
+   人对环境的**主动选择**和**能动的活动**是实现环境对人的发展的影响作用的决定性因素。人的**主观能动性的发挥**和人的社会实践对人的发展起着决定性的作用。**忽视人的主观能动性的“环境决定论”是完全错误的。**
+
+### （三）人的主观能动性——决定因素（作用/决定作用/内在作用）
+
+主观能动性是指**人的主观意识和实践活动对于客观世界的发作用和能动作用**。
+
+人的主观能动性是人发展的**内在动力**，对人的发展起**决定作用**。
+
+在**同样的环境和教育条件下**，每个学生发展的**特点和成就**，主要取决于他**自身的态度**，取决于他在学习、劳动和科研活动中所付出的精力。
+
+### （四）教育（学校教育）——主导因素（指明方向、引导、帮助）
+
+**教育，尤其是学校教育，在人的发展中起主导作用。**
+
+1. **学校教育在人的身心发展中起主导作用的原因**（特点/优势）
+
+   学校教育是**有目的、有计划、有组织**的培养人的活动，它规定着人的发展方向。
+
+   学校教育是由**受过专门训练的教师**来进行的，相对其他教育而言效果更好。**（专业的人员）**
+
+   学校教育能有效地**控制和协调**影响学生发展的各种因素。
+
+   学校教育给人的影响比较**全面、系统和深刻**。
+
+2. **学校教育在人的身心发展中起主导作用的表现**
+
+   学校教育按**社会对个体的基本要求**对个体发展的方向与方面做出**社会性规范**。
+
+   学校教育具有**加速个体发展**的特殊功能。
+
+   学校教育，尤其是基础教育，对个体发展的影响具有**即时和延时**作用。
+
+   学校教育具有**开发个体特殊才能**和**发展个性**的功能。
+
+3. **学校教育在人的身心发展中起主导作用的条件**
+
+   遵循人的**身心发展规律**
+
+   正确处理好**内因和外因**的关系，充分激发学生的**主观能动性**
+
+   正确处理**教育与遗传素质、环境**等因素的**关系**
+
+
+
+[返回目录](#教育与人的发展（重点）)
+
+------
+
+
+
+## 六、教育与人的个性化形成
+
+### （一）个性化的概念
+
+个性化是指个体在社会活动中形成的自主性、独特性和创造性的过程，人的个性化的形成与发展依赖于教育的作用。
+
+### （二）教育对人的个性化形成的作用
+
+- 教育促进人的主体意识的形成和主体能力的发展
+- 教育促进个体差异的充分发展，形成人的独特性
+- 教育开发人的创造性，促进个体价值的实现
+
+
+
+[返回目录](#教育与人的发展（重点）)
+
+------
+
