--- a/education/md文件/教育基础知识与基本原理/教育研究的基本方法.md
+++ b/education/md文件/教育基础知识与基本原理/教育研究的基本方法.md
@@ -1,1 +1,173 @@
 # 教育研究的基本方法
+
+[TOC]
+
+## 一、观察法
+
+### （一）观察法的概念
+
+人们有目的、有计划地通过感官或辅助仪器，对处于自然状态下的客观事物进行系统感知和考察，从而获取经验事实的一种科学研究方法。**观察法是教育研究中广泛使用的基本研究方法。**
+
+### （二）观察法的类型
+
+1. **自然观察法和实验观察法**
+
+   根据对**观察的环境条件是否进行控制和改变(观察条件是否人为控制)**，观察可分为**自然观察法**和**实验观察法**。
+
+2. **直接观察和间接观察**
+
+   根据**观察时是否借助仪器设备**，观察可分为**直接观察**和**间接观察**。
+
+3. **参与式观察法和非参与式观察法**
+
+   根据观察者**是否直接参与被观察者所从事的活动(观察者是否直接介人活动)**，观察可分为参与式观察和非参与式观察。
+
+4. **结构式观察和非结构式观察**
+
+   根据**观察内容是否有统一设计，是否有一定结构的观察项目和要求**，观察可分为**结构式观察**和**非结构式观察**。
+
+5. **系统观察和非系统观察**
+
+   根据**观察活动是否有规律**，观察可分为**系统性观察**和**非系统性观察**
+
+### （三）观察法的一般步骤
+
+1. **事先做好准备，指定观察计划**
+2. **按计划进行实际观察**
+3. **及时整理资料**
+
+
+
+[返回目录](#教育研究的基本方法)
+
+------
+
+
+
+## 二、调查法
+
+### （一）调查法的基本概念
+
+调查法是研究者**通过问卷、访谈等方式，有目的、有计划地收集研究对象的有关资料**，并取得资料进行整理和分析，从而**揭示事物的本质和规律**，**寻求解决实际问题的方案**的研究方法。
+
+### （二）调查法的类型
+
+1. **普遍调查、抽样调查和个案调查**
+
+   根据**调查对象的选择范围**，调查可分为**普遍调查、抽样调查和个案调查**。
+   **普遍调查：**又称**全面调查**，即对某一范围内所有调查对象进行调查的一种调查方法。
+   **抽样调查：**即从调查对象的全体范围(总体)中，抽取一**部分单位(样本)**进行调查，并以样本特征值推断总体特征值的一种调查方法。
+
+   **个案调查：**即在对被调查的教育现象或教育对象进行具体分析的基础上，**有意识地**从中选择**某个教育现象或教育对象**进行调查与描述的一种调查方法。
+
+2. **现状调查、相关调查、发展调查和预测调查**
+
+   根据**调查的内容**，调查可分为**现状调查、相关调查、发展调查和预测调查**。
+
+3. **问卷调查、访谈调查、测量调查和调查表法**
+
+   根据**调查的方法和手段**，调查可分为**问卷调查、访谈调查、测量调查和调查表法**。
+
+   **问卷调查：**又称**问题表格法**，指**以书面提出问题的方式搜集资料**的一种调查研究方法。
+
+   **访谈调查：**指研究者通过与研究对象进行面对面的交谈，**以口头问答的形式搜集资料**的一种调查研究方法。
+
+### （三）调查法的一般步骤
+
+- 确定调查课题
+- 选择调查对象
+- 确定调查方法和手段，编制和选用调查工具
+- 指定调查计划
+- 实施调查
+- 整理、分析调查资料，撰写调查报告
+
+
+
+[返回目录](#教育研究的基本方法)
+
+------
+
+
+
+## 三、历史法
+
+### （一）历史法的概念
+
+历史法是研究者**通过搜集某种教育现象发生、发展和演变的历史事实，进行系统、客观地分析研究**，从而**揭示其本质和发展规律**的研究方法。
+
+### （二）历史法的一般步骤及局限性
+
+历史法包括**史料的收集、史料的鉴别、史料的分类**三个步骤。
+
+采用历史法探讨教育现象及问题有一定的局限性：
+
+- 由于只能在现存的文献与史料中寻找证据，资料数量有限，资料本身存在是否可靠的问题，历史法在应用上会受到一定限制。
+- 研究中的史料由研究者解释，带有一定的主观成分，其客观性不及其他实证研究方法。
+
+
+
+[返回目录](#教育研究的基本方法)
+
+------
+
+
+
+## 四、实验法
+
+### （一）实验法的概念
+
+实验法是研究者按照研究目的，**合理地控制或创设一定的条件，人为地影响研究对象，从而验证假设**，探讨条件和教育对象之间的因果关系的研究方法。
+
+### （二）实验法的类型
+
+1. **实验室实验和自然实验**
+
+   根据**实验进行的场所**，实验可分为**实验室实验**和**自然实验**。
+
+2. **确认性实验、探索性实验和验证性实验**
+
+   根据**实验的目的**，实验可分为**确认性实验、探索性实验和验证性实验**。、
+
+3. **单因素实验和多因素实验**
+
+   根据**同一实验中变量因素的多少**，实验分为**单因素试验**和**多因素实验**
+
+4. **前实验、准实验和真实验**
+
+   根据**实验控制的程度**，实验可分为**前实验**、**准实验**和**真实验**。
+
+### （三）实验法的一般步骤
+
+- 确定实验目的、方法和组织形式，拟订实验计划。
+- 创造实验条件，准备实验用具。
+- 在实验过程中要做精确而详尽的记录，在各阶段中要做准确的测验。
+- 处理实验结果，考虑各种因素的作用，慎重核对结论。
+
+
+
+[返回目录](#教育研究的基本方法)
+
+------
+
+
+
+### 五、行动研究法
+
+### （一）行动研究法的概念
+
+行动研究法是指**教师在现实教育教学情境中自主进行反思性探索，并以解决工作情境中特定的实际问题为主要目的**的研究方法。它**强调研究与活动一体化**，使教师从工作过程中学习、思考、尝试和解决问题。
+
+### （二）行动研究法的一般步骤
+
+- **确定研究课题。**发现教育工作中亟待解决的实际问题，选定研究课题，并对研究问题的成因进行分析、诊断与判定。
+- **拟订研究计划。**明确课题研究的总目标，并围绕总目标设计研究的方法、程序、监控手段等。
+- **实施行动研究。**收集资料、拟订并实施有效的教育措施。
+- **进行总结评价。**汇集资料、做好观察记录，根据各种信息反馈认真修正行动计划，再实施新一轮行动研究，直至实现研究总目标。
+
+
+
+[返回目录](#教育研究的基本方法)
+
+------
+
+ 
