--- a/education/md文件/教育基础知识与基本原理/教育与人的发展.md
+++ b/education/md文件/教育基础知识与基本原理/教育与人的发展.md
@@ -152,6 +152,10 @@
 - 华生，提出了**“给我一打健康的婴儿，不管他们的祖先状况如何，我可以任意把他们培养成领袖到小偷各种类型的人”**的著名论断。
 - 斯金纳，继承华生的观点
 
+**备考锦囊**
+
+- **“外出寻找落花生在哪”：**“外”代表外铄论，“寻”代表**荀子**，”落“代表**洛克**，“花生”代表**华生**，“哪”代表**斯纳金**
+
 ### （三）多因素相互作用论
 
 辩证唯物主义认为，人的发展是**个体的内在因素**（如先天的遗传物质、机体成熟的机制）与**外部环境**（外在刺激的强度、社会发展的水平、个体的文化背景等）在个体活动中**相互作用的结果**。
