--- a/education/md文件/教育基础知识与基本原理/教育制度.md
+++ b/education/md文件/教育基础知识与基本原理/教育制度.md
@@ -25,7 +25,7 @@
 
    相对于制度化教育而言，所推崇的理念是**“教育不应再限于学校的围墙之内”**。**构建学习化社会的理想**正是非制度化教育的**重要体现**。
 
-### （三）教育制度的影响因素（建立学制的因素）
+### （三）教育制度的影响因素（建立学制的依据）
 
 1. **生产力发展水平和科学技术发展状况**
 
