--- a/education/md文件/简答题.md
+++ b/education/md文件/简答题.md
@@ -3,3 +3,70 @@
 [TOC]
 
 ## 第一章 教育基础知识和基本原理
+
+### （一）简述教育的政治功能
+
+**参考答案：**
+
+- **教育为政治经济制度培养所需要的人才**。教育通过培养人才实现对政治经济制度的影响，是教育作用于政治经济制度的**主要途径**。教育通过**促进个体社会化**来为一定的政治经济制度服务。
+- **教育可以促进民主**。一个国家民主程度直接取决于国家的政体，但又**间接取决于这个国家人民的文化程度、教育事业的发展程度**。
+- **教育是一种可以影响政治经济制度的舆论力量**。可以通过在校师生的言论行动、学校教材和刊物，向社会宣传一定的思想意识，服务于一定政治经济制度。
+- **教育对政治经济制度并不起决定作用，不能改变政治经济制度的发展方向，也不能成为决定政治经济制度发展的根本动力，教育对社会的发展只能起到加速或延缓的作用。**
+
+[返回目录](#简答题)
+
+### （二）为什么教育对人的发展起主导作用？
+
+**参考答案：**
+
+- 有计划、有组织**的培养人的活动，它规定着人的发展方向。
+- 学校教育是由**受过专门训练的教师**来进行的，相对其他教育而言效果更好。**（专业的人员）**
+- 学校教育能有效地**控制和协调**影响学生发展的各种因素。
+- 学校教育给人的影响比较**全面、系统和深刻**。
+
+[返回目录](#简答题)
+
+### （三）教育（学校教育）在人的身心发展中起主导作用的表现
+
+**参考答案：**
+
+- 学校教育按**社会对个体的基本要求**对个体发展的方向与方面做出**社会性规范**。
+- 学校教育具有**加速个体发展**的特殊功能。
+- 学校教育，尤其是基础教育，对个体发展的影响具有**即时和延时**作用。
+- 学校教育具有**开发个体特殊才能**和**发展个性**的功能。
+
+[返回目录](#简答题)
+
+### （四）一个国家的学制建立的主要依据有哪些？
+
+**参考答案：**
+
+- **生产力发展水平和科学技术发展状况**。生产力发展水平和科学技术发展状况明显地影响着**学校的课程设置、修业年限、入学机会以及学校的规模结构等**。
+
+- **社会政治经济制度**。学制是社会发展到一定历史阶段的产物。**学制受统治阶级的有关方针、政策的制约，反映着统治阶级的愿望和诉求。**
+
+- **青少年儿童身心发展规律**。学制的建立与改革必须**遵循青少年儿童身心发展的规律**。
+
+- **本国学制的历史发展和国外学制的影响**。吸收原学制中合理的部分，适合并体现本民族特点和文化传统。借鉴其他国家先进的学制经验，完善本国学制，更好地培养人才。
+
+[返回目录](#简答题)
+
+### （五）简述我国当前教育方针的基本内容
+
+**参考答案：**
+
+- 2015年修订的《中华人民共和国教育法》指出：“教育必须**为社会主义现代化建设服务、为人民服务，必须与生产劳动和社会实践相结合**，培养德、智、体、美等方面全面发展的社会主义建设者和接班人。"
+
+[返回目录](#简答题)
+
+### （六）简述美育对促进学生德智体全面发展的意义
+
+**参考答案：**
+
+- **促进学生的智力发展，扩大和加深他们对客观世界的认识**
+- **促进学生科学世界观和良好道德品质的形成**
+- 促进学生体育的发展
+- **促进劳动教育**
+- 提高人的审美能力和审美修养，促进文化建设和思想建设
+
+[返回目录](#简答题)
