--- a/education/md文件/辨析题.md
+++ b/education/md文件/辨析题.md
@@ -3,3 +3,123 @@
 [TOC]
 
 ## 第一章 教育基础知识和基本原理
+
+### （一）凡是能影响人的身心发展的活动都是教育
+
+**参考答案：**
+
+这种说法是错误的。
+
+教育是一种有目的地培养人的社会活动，这是教育区别于其他事物现象的根本特征，是教育的本质属性。、
+
+教育是人类所特有的一种有意识的社会活动，是人类有意识地传递社会经验的活动，是以人的培养为直接目标的社会实践活动。
+
+影响人的身心发展的活动，可能是有意识的，也可能是无意识的；可能是有目的的，也可能是是无目的的。如果影响人的身心发展的活动是无意识、无目的的，就不能称之为教育。
+
+因此，题干的说法是错误的。
+
+[返回目录](#辨析题)
+
+### （二）教育具有历史继承性
+
+**参考答案：**
+
+这种说法是正确的。
+
+教育的历史继承性是指每个时代的教育都与以往的教育有着传承和接续关系。
+
+教育具有自身规律，而规律是不以人们的意志为转移的客观存在，人们只能越来越多地认识并利用它；同时，任何文化的发展和教育的进步都是历史长河中的一个组成部分。
+
+这就决定了一定社会形态下的教育的思想、制度、目标、内容、方法和手段，都是在继承与超越前一社会形态下的教育的基础上产生的。
+
+[返回目录](#辨析题)
+
+### （三）教育对人发展的作用总是积极的
+
+**参考答案：**
+
+这种说法是错误的。
+
+教育 功能可以分为正向功能和负向功能。
+
+教育的正向功能也称积极功能，是指聚焦于有助于社会的进步和个体发展的积极影响和作用。
+
+教育的负向功能也称消极功能，是指教育阻碍社会进步和个体发展的消极影响和作用。
+
+教育对人的发展有着重要的促进作用，特别是学校教育，在人的发展中起着主导作用。但是，这种作用的发挥是有条件的，并非所有的教育都能发挥正想的促进作用。
+
+例如，应试教育下追求高分数的标准化教学，压抑了学生个性的发展、
+
+因此，教育对人发展的作用并不总是积极的，也存在消极影响。
+
+[返回目录](#辨析题)
+
+### （四）遗传在人的发展起决定作用
+
+**参考答案：**
+
+这种说法是错误的。
+
+在人的身心发展中起决定作用的 不是遗传，而是人的主观能动性。影响人身心发展的因素包括遗传、环境、人的主观能动性和教育。
+
+遗传为人的身心发展提供了生理前提，使人的发展成为可能。
+
+环境为人的身心发展提供了现实条件。
+
+人的主观能动性是人发展的内在动力，对人的发展起决定作用。
+
+教育，尤其是学校教育，在人的身心发展中起主导作用。
+
+故题干中的说法错误。
+
+[返回目录](#辨析题)
+
+### （五）遗传素质具有可塑性
+
+**参考答案：**
+
+这种说法正确的。
+
+随着环境、教育和实践活动的作用或训练，人的遗传素质会逐渐地发生变化，这说明人的遗传素质具有可塑性。人的生活经验证明，长期进行某一方面的训练，可以使脑的某一方面反应能力提高。人的遗传素质的发展，也会因为人的生活条件的不同，或提前或推迟。
+
+这些都说明遗传素质具有可塑性。
+
+[返回目录](#辨析题)
+
+### （六）教育在人的身心发展中起决定作用
+
+**参考答案：**
+
+这种说法是错误的。
+
+在人的身心发展中起决定作用不是教育，而是人的主观能动性。
+
+影响人的身心发展的因素包括遗传、环境、人的主观能动性和教育。
+
+遗传为人的身心发展提供了生理前提，使人的发展成为可能。
+
+环境为人的身心发展提供了现实条件。
+
+人的主观能动性是人发展的内在动力，对人的发展起决定作用。
+
+教育，尤其是学校教育，在人的身心发展中起主导作用。
+
+故题干中的说法错误。
+
+[返回目录](#辨析题)
+
+### （七）教育目的和培养目标是同一概念
+
+**参考答案：**
+
+这种说法是错误的。
+
+教育目的是把受教育者培养成一定社会需要的人的总要求，是学校教育所要培养的人的质量规格。教育目的分为三个层次：国家教育目的、各级各类学校的培养目标、教师的教学目标。
+
+培养目标教育目的的具体化，是结合教育目的、社会要求和受教育者的特点制定的各级各类教育的培养要求。
+
+因此，教育目的和培养目标不是同一概念，它们之间是普遍与特殊的关系。
+
+故题干中的说法错误。
+
+[返回目录](#辨析题)
