--- a/education/md文件/教育基础知识与基本原理/教育的产生与发展.md
+++ b/education/md文件/教育基础知识与基本原理/教育的产生与发展.md
@@ -88,6 +88,13 @@
 
    教育是以影响和发展人的**身心**为直接目标的。
 
+**备考锦囊**
+
+1. 掌握教育的本质属性，要抓住几个关键词：
+   - **“有目的”**，区别于无目的、无意识的活动，因此，不是所有影响人的身心发展的活动都是教育
+   - **“培养人”**，教育的直接目标是人的培养
+   - **“社会活动”**，这体现了教育的社会性，教育是人类所特有的活动，动物界没有教育
+
 ### （二）教育的社会属性
 
 1. **教育具有永恒性**
@@ -224,6 +231,16 @@
 
 ​		该观点认为**教育起源于人类的交往活动**，而不是生产劳动。
 
+**备考锦囊**
+
+- **“本能生利息”（生物起源论）：**“本能”一是表示教育起源于动物界中各类动物的生存本能，二是表示代表人物之一**沛西·能**；
+
+  “利”表示代表人物之一**利托尔塔**。
+
+- **“心理仿梦露”（心理起源论）：**“仿”表示理论内容是教育起源于儿童对成人的无意识模仿；“梦露”表示代表人物**孟禄**
+
+- **“米凯爱劳动”（劳动起源论）：**“米凯”表示代表人物**米丁斯基**和**凯洛夫**
+
 
 
 [返回目录](#教育的产生与发展)
@@ -292,41 +309,43 @@
 
    - **教育形式**
 - **宫廷学校：**宫廷学校是法老教育皇子皇孙和贵族子弟的场所
-     
+  
 - **僧侣学校(寺庙学校)：**僧侣学校进行的是较高深的科学教育，重在学术知识的传授和研讨，是传授高深知识的学府
-     
+  
 - **职官学校(书吏学校）：**职官学校用以训练本部门需要的官吏，其教学内容包括普通文化课程及专门职业教育
-     
+  
 - **文士学校：**教育目的是培养熟练运用文字从事书写及计算工作的人
-     
+  
 - **教育特点**
-   
+  
   - **“以僧为师”**、**“以(书)吏为师”** 是古代埃及教育的一大特征
-   
+  
+
 **古代希腊**
-   
+
 - **教育形式**
-   
+  
   - **雅典教育：**教育目的是**培养有文化修养和多种才能的政治家和商人**；**在西方最早形成体育、德育、智育、美育和谐发展的教育**，教育 内容比较丰富，教育方法也比较灵活
-   
+  
   - **斯巴达教育：**教育目的是**培养忠于统治阶级的强悍的军人和武士**；**强调军事体育训练(五项竞技——赛跑、跳跃、角力、投标枪、掷铁饼)和政治道德灌输**，教育内容单一，教育方法也比较严厉
-   
+  
 - **教育特点**
-   
+  
   - 不同社会阶层的人受教育的方式不同
-   
+  
+
 **中世纪的欧洲国家**
-   
+
 - **教育形式**
-   
+  
   - **教会教育：**教育目的是培养教士和僧侣，教育内容是**“七艺”**，包括**“三科”(文法、修辞、辩证法，也被称为“三艺”)和“四学”(算  术、几何、天文、音乐)**
-   
+  
   - **骑士教育：**教育目的是培养封建骑士，**教育内容是“骑士七技”**，即**骑马、击剑、打猎、投枪、游泳、下棋、吟诗**
-   
+  
 - **教育特点**
-   
+  
   - 欧洲封建社会的教会教育和骑士教育都**脱离了生产劳动**，**为封建地主阶级的统治服务**
-   
+  
 4. **古代社会教育的特征**
 
    古代社会产生了学校，教育成为社会的专门职能，成为**统治阶级的统治工具**
