--- a/education/md文件/教育基础知识与基本原理/教育目的.md
+++ b/education/md文件/教育基础知识与基本原理/教育目的.md
@@ -297,7 +297,7 @@
    - 使学生掌握身心卫生保健知识
    - 发展学生良好的品德
 
-4. **美育**
+4. **美育**（重点）
 
    **美育的概念**
 
@@ -305,11 +305,19 @@
 
    **美育的意义**
 
-   - **促进学生的智力发展，扩大和加深他们对客观世界的认识**
-   - **促进学生科学世界观和良好道德品质的形成**
-   - 促进学生体育的发展
+   ​		**社会主义精神文明建设中的意义**
+
+   - **促进文化建设和思想建设**
+   - **促进我国社会主义精神文明建设**
+
+   ​		**促进学生全面发展的意义**
+
+   - **促进学生的智力发展**，扩大和加深他们对客观世界的认识
+   - **促进学生科学世界观和良好道德品质的形成（德育）**
+   - **促进学生体育的发展**
    - **促进劳动教育**
-   - 提高人的审美能力和审美修养，促进文化建设和思想建设
+
+     
 
    **美育的基本任务**
 
