--- a/education/md文件/简答题.md
+++ b/education/md文件/简答题.md
@@ -70,3 +70,152 @@
 - 提高人的审美能力和审美修养，促进文化建设和思想建设
 
 [返回目录](#简答题)
+
+### （七）简述政治经济制度对教育的影响
+
+**参考答案：**
+
+政治经济制度对教育的影响体现在以下几个方面。
+
+- 政治经济制度决定教育的领导权。
+- 政治经济制度决定受教育权。
+- 政治经济制度制约教育目的的性质和思想道德教育的内容。
+- 政治经济制度决定教育体制。
+
+[返回目录](#简答题)
+
+### （八）简述影响人发展的因素
+
+**参考答案：**
+
+影响人的发展的因素主要有以下几种。
+
+- 遗传素质也叫遗传，为人的身心发展提供了生理前提，使人的发展成为可能。
+- 环境，是人的身心发展的客观条件，为人的发展提供了现实条件。
+- 人的主观能动性，是人发展的内在动力，对人的发展起决定作用。
+- 学校教育，在人的身心发展中起主导作用。
+
+[返回目录](#简答题)
+
+------
+
+
+
+## 第二章 中学课程
+
+### （一）简述活动课程的特点
+
+**参考答案：**
+
+- 从儿童的**需要，兴趣和个性**出发设计课程
+- 以儿童的**心理发展顺序**为中心编制课程
+- 主张儿童在**活动**中探索，尝试错误，学到方法。
+
+[返回目录](#简答题)
+
+### （二）简述学科中心论的主要观点
+
+**参考答案：**
+
+- **结构主义课程理论**
+
+  **主要代表人物是布鲁纳**
+
+  **主要观点：**
+
+  - 重视学科结构的重要性
+  - 提倡螺旋式课程
+  - 倡导发现学习
+
+- **要素主义课程理论**
+
+  **主要代表人物是巴格莱**
+
+  **主要观点：**
+
+  - 课程的内容应该是人类文化的“共同要素”，课程的设置首先要考虑国家和民族的利益
+  - 学科课程是向学生提供经验的最佳方法
+  - 重视系统知识的传授，以学科课程为中心
+
+- **永恒主义课程理论**
+
+  **主要代表人物是赫饮斯**
+
+  **主要观点：**
+
+  - 具有理智训练价值的、传统的“永恒学科”的价值高于实用学科的价值
+  - “永恒学科”是课程的核心。
+
+[返回目录](#简答题)
+
+### （三）简述教材编写的基本要求
+
+**参考答案：**
+
+- **按照不同学科的特点，体现科学性与思想性。**教材的内容首先必须是科学、可靠的知识，是经过实践检验的客观真理。思想性就是要结合教学内容，使学生形成**历史唯物主义的思想观念**。
+- **强调内容的基础性。**基础性是教材不同于其他任何书籍的基本特点。
+- **体现教材的普适性。**在保证科学性的前提下，教材的编写还要**考虑我国社会发展的现实水平和教育现状**，必须注意到教材对大多数学生和学校的适用性。
+- **在教材的编排上，要做到知识的内在逻辑与教学法要求的统一。**
+- **教材的编排形式要有利于学生的学习。**教材的编排要符合卫生学、教育学、心理学和美学的要求，有利于学生的学习。
+- **教材的编写要兼顾同一年级各门学科内容之间的关系和同一学科各年级教材之间的衔接。**
+
+[返回目录](#简答题)
+
+### （四）我国新一轮基础教育课程改革的具体目标有哪些？
+
+**参考答案：**
+
+1. **实现课程功能的转变**
+
+2. **体现课程结构的均衡性、综合性和选择性**
+
+3. **密切课程内容与生活和时代的联系**
+
+4. **改善学生的学习方式**
+
+5. **建立与素质教育理念相一致的评价与考试制度**
+
+6. **实行三级课程管理制度**
+
+[返回目录](#简答题)
+
+### （五）简述综合实践活动的主要领域
+
+**参考答案：**
+
+综合实践活动内容包括**信息技术教育**、**研究性学习、社区服务与社会实践**以及**劳动与技术教育**。
+
+- **信息技术教育：**旨在培养学生**适应信息时代所需要的信息素养**的学习领域。其目的是提高学生**利用信息技术的意识和能力、对信息的反思和辨别能力**，从而形成信息伦理。
+- **研究性学习：**是指学生**基于自身兴趣**在教师指导下，从**自然、社会和学生自身生活中**选择和确定研究专题，**主动获取知识、应用知识、解决问题的学习活动**。
+- **社区服务与社会实践：**是学生在教师指导下，走出教室，**参与社区和社会实践**，以获取直接经验**发展实践能力、增强社会责任感**为主旨的学习活动。
+- **劳动与技术教育：**是以学生获得积极**劳动体验、形成良好技术素养**为主的多方面发展为目标，且**以操作性学习为特征**的学习领域。
+
+[返回目录](#简答题)
+
+### （六）简述社会中心课程论的主要观点
+
+**参考答案：**
+
+社会中心课程论**又称社会改造主义课程论**，以布拉梅尔德为代表。
+
+社会中心课程论认为应该把课程的重点放在当代社会的问题、社会的主要功能、学生关心的社会现象，以及社会改造和社会活动计划等方面。
+
+其核心观点在于课程不应该帮助学生去适应社会，而应该建立一种新的社会秩序和社会文化。
+
+社会中心课程论的特点：一是主张学生尽可能多地参与到社会中去；二是主张课程要以广泛的社会问题为中心。
+
+[返回目录](#简答题)
+
+### （七）简述教材的作用
+
+**参考答案：**
+
+教材是教师和学生进行教学活动的材料，包括教科书、讲义、讲授提纲、参考书、活动指导书及各种视听材料。其作用体现在以下几方面。
+
+教材是学生在学校获得系统知识、进行学习的主要材料，它可以帮助学生掌握教师讲授的内容，同时，也便于学生预习、复习和做作业。
+
+教材是学生进一步扩大知识领域的基础，所以教师要教会学生如何有效地使用教材，发挥教材的最大作用。
+
+教材是教师进行教学的主要依据，它为教师备课、上课、布置作业和评定学生学习成绩提供了基本材料。熟练地掌握教材内容是教师顺利完成教学任务的重要条件。
+
+[返回目录](#简答题)
