--- a/education/md文件/辨析题.md
+++ b/education/md文件/辨析题.md
@@ -123,3 +123,106 @@
 故题干中的说法错误。
 
 [返回目录](#辨析题)
+
+### （八）学校教育主导作用的发挥是无条件的
+
+**参考答案：**
+
+这种说法是错误的。
+
+学校教育发挥主导作用是有条件的：
+
+- 只有遵循人的身心发展规律，教育才能促进人的发展，违背人的身心发展规律的教育对人是一种摧残
+- 只有正确处理好内因和外因的关系，充分激发学生的主观能动性，教育才能产生积极的作用
+- 只有正确处理教育与遗传素质、环境等因素的关系，发挥各项因素的作用，教育的效果才能达到最大化。
+
+[返回目录](#辨析题)
+
+### （九）个体的主观能动性对人的发展起决定作用
+
+**参考答案：**
+
+这种说法是正确的。
+
+主观能动性是指人的主观意识和实践活动对于客观世界的反作用或能动作用。
+
+遗传素质只是为人的身心发展提供了生理前提，为人的发展提供了可能性，这种可能性要转化为人发展的现实性，离不开环境的影响和人的能动的活动的影响。
+
+教育是一种转化的过程。这种转化过程要求个体必须有自身的主观能动性。在同样的环境和教育条件下，每个学生发展的特点和成就，主要取决于他自身的态度，取决于他在学习、劳动和科研活动中所付出的精力。
+
+所以，个体的主观能动性是人的发展的决定性因素。
+
+[返回目录](#辨析题)
+
+------
+
+
+
+## 第二章 中学课程
+
+### （一）总体而言，学校课程主要内容由简介经验构成
+
+**参考答案：**
+
+这种说法是正确的。
+
+从总体上来讲，课程内容是根据课程目标从人类的经验体系中选择出来，并按照一定的学科逻辑序列和儿童心理发展需求组织编
+排而成的知识体系和经验体系。
+
+课程内容的基本性质是知识，它包含学生应当具有的间接经验和与之相关的直接经验。
+
+间接经验即理论化、系统化的书本知识，是课程内容的主要来源
+
+直接经验是指学生为学习书本知识而需要的感性知识，是课程内容的补充和完善。
+
+因此，学校课程内容主要是由间接经验构成的。
+
+[返回目录](#辨析题)
+
+### （二）教材编写的直接依据是课程计划
+
+**参考答案：**
+
+这种说法是错误的。
+
+教材编写的直接依据是课程标准。
+
+课程标准准是指在一定课程理论的指导下，依据培养目标和课程方案，以纲要的形式编制的关于教学科目内容、教学实施建议以及课程资源开发等方面的指导性文件。
+
+课程标准是教材编写和教师进行教学的直接依据，是国家管理和评价课程的基础。
+
+课程计划是学校安排整个课程检查、衡量学校工作和质量的基本依据。课程计划还是编制各科课程标准和教材的主要依据，但并不是直接依据。
+
+故题干中的说法是错误的。
+
+[返回目录](#辨析题)
+
+### （三）就其地位而言，地方课程是国家课程的补充和延伸
+
+**参考答案：**
+
+这种说法是错误的。
+
+国家课程是根据所有公民基本素质发展的一般要求设计的课程，它反映了国家教育的基本标准，体现了国家对各个地方的中小学教育的共同要求。它的主导价值在于通过课程体现国家的教育意志，确保所有公民的共同基本素质。它对政治方向的把握、教育方针的贯彻、培养目标的落实起着决定性作用。
+
+地方课程是地方教育主管部门以国家课程标准为基础，在一定的教育思想和课程观念的指导下，根据地方经济、政治和文化发展水平等实际情况而设计的课程。它的主导价值在于通过课程满足地方社会发展的现实需要。
+
+地方课程是基础教育课程结构的重要组成部分，与国家课程具有平等的地位和作用，不应将其理解为国家课程的补充和延伸。
+
+故题干中的说法是错误的。
+
+[返回目录](#辨析题)
+
+### （四）在课程内容的组织形式上，纵向组织优于横向组织
+
+**参考答案：**
+
+这种说法是错误的。
+
+纵向组织是指按照知识的逻辑序列，从已知到未知、从具体到抽象、由易到难、由简到繁等先后顺序组织编排课程内容。它注重课程内容的独立体系和知识的深度。
+
+横向组织是指打破学科的知识界限和传统的知识体系，按照学生发展的阶段，以学生发展阶段需要探索的、社会和个人最关心的问题为依据组织课程内容，使课程内容构成一个个相对独立的专题。它强调课程内容的综合性和知识的广度。
+
+纵向组织与横向组织的侧重点不同，不能说纵向组织优于横向组织。
+
+[返回目录](#辨析题)
