--- a/信息安全工程师/md/1.7 信息安全风险管理.md
+++ b/信息安全工程师/md/1.7 信息安全风险管理.md
@@ -10,7 +10,7 @@
 
 图1-7-1蛋的裂缝可以看作“鸡蛋”系统的脆弱性，而苍蝇可以看作威胁，苍蝇叮有缝的蛋表示威胁利用脆弱性造成了破坏。
 
-<img src="D:\基础\Web 前端\note\GR-ZYX.github\信息安全工程师\image\图 1-7-1.jpg" style="zoom:33%;" />
+<img src="..\image\图 1-7-1.jpg" style="zoom:33%;" />
 
 ## 1.7.1 风险评估
 
