--- a/信息安全工程师/md/2.1 信息安全法律法规.md
+++ b/信息安全工程师/md/2.1 信息安全法律法规.md
@@ -99,7 +99,225 @@
    | 威胁社会主义市场经济秩序和社会管理秩序         | （1）利用互联网销售伪劣产品或者对商品、服务作虚假宣传<br />（2）利用互联网损害他人商业信誉和商品声誉<br />（3）利用互联网侵犯他人知识产权<br />（4）利用互联网编造并传播影响证券、期货交易或者其他扰乱金融秩序的虚假信息<br />（5）在互联网上建立淫秽网站、网页，提供淫秽站点链接服务，或者传播淫秽书刊、影片、音像、图片 |
    | 威胁个人、法人和其他组织的人身、财产等合法权利 | （1）利用互联网侮辱他人或者捏造事实诽谤他人<br />（2）非法截获篡改、删除他人电子邮件或者其他数据资料，侵犯公民通信自由和通信秘密<br />（3）利用互联网进行盗窃、诈骗、敲诈勒索 |
 
+[返回目录](#2.1 信息安全法律法规)
+
+###  2.1.2.2  《中华人民共和国网络安全法》
+
+2016年11月7日第十二届全国人民代表大会常务委员会第二十四次会议通过了**《中华人民共和国网络安全法》**，自**2017年6月1日**起施行。
+
+**《中华人民共和国网络安全法》**草案共7章79条，涉及网络设备、网络运行、网络数据、网络信息等方面的安全。其中，**禁止为不实名用户提供服务、出售公民信息可处最高10倍违法所得的罚款、重大事件可限制网络、阻止违法信息传播**是本法的四大亮点。
+
+**第一章    总则**
+
+第八条	**国家网信部门**负责统筹协调网络安全工作和相关监督管理工作。**国务院电信主管部门、公安部门**和**其他有关机关**依照本法和有关法律、行政法规的规定，在各自职责范围内负责网络安全保护和监督管理工作。
+
+县级以上地方人民政府有关部门的网络安全保护和监督管理职责，按照国家有关规定确定。
+
+**第三章	网络运行安全**
+
+-  **第一节	一般规定**
+
+  - **第二十一条**	<u>**国家实行网络安全等级保护制度**</u>。**网络运营者**应当按照网络安全等级保护制度的要求，履行下列安全保护义务，保障网络免受干扰、破坏或者未经授权的访问，防止网络数据泄露或者被窃取、篡改：
+
+    - <u>（一）制定内部安全管理制度和操作规程，确定网络安全负责人，落实网络安全保护责任</u>
+    - <u>（二）采取防范计算机病毒和网络攻击、网络侵入等危害网络安全行为的技术措施</u>
+    - <u>（三）采取监测、记录网络运行状态、网络安全事件的技术措施，并按照规定留存相关的网络日志不少于六个月</u>
+    - <u>（四）采取数据分类、重要数据备份和加密等措施</u>
+    - <u>（五）法律、行政法规规定的其他义务</u>
+
+  - **第二十二条**    网络产品、服务应当符合相关国家标准的强制性要求。网络产品、服务的提供者不得设置恶意程序；发现其网络产品、服务存在安全缺陷、漏洞等风险时，应当立即采取补救措施，按照规定及时告知用户并向有关主管部门报告。
+
+    网络产品、服务的提供者应当为其产品、服务持续提供安全维护；在规定或者当事人约定的期限内，不得终止提供安全维护。
+
+    <u>网络产品、服务具有收集用户信息功能的，其提供者应当向用户明示并取得同意；涉及用户个人信息的，还应当遵守本法和有关法律、行政法规关于个人信息保护的规定。</u>
+
+  - **第二十四条**    网络运营者为用户办理网络接入、域名注册服务，办理固定电话、移动电话等入网手续，或者为用户提供信息发布、即时通讯等服务，在与用户签订协议或者确认提供服务时，应当要求用户提供真实身份信息。<u>**用户不提供真实身份信息的，网络运营者不得为其提供相关服务。**</u>国家实施网络可信身份战略，支持研究开发安全、方便的电子身份认证技术，推动不同电子身份认证之间的互认。
+
+- **第二节    关键信息基础设施的运行安全**
+
+  - **第三十一条**    国家对公共通信和信息服务、能源、交通、水利、金融、公共服务、电子政务等重要行业和领域，以及其他一旦遭到破坏、丧失功能或者数据泄露，**可能严重危害国家安全、国计民生、公共利益的关键信息基础设施**，在网络安全等级保护制度的基础上，实行重点保护。关键信息基础设施的具体范围和安全保护办法由国务院制定。
+
+    国家鼓励关键信息基础设施以外的网络运营者自愿参与关键信息基础设施保护体系。
+
+**第四章    网络信息安全**
+
+- **第四十条**    网络运营者应当对其收集的用户信息严格保密，并<u>建立健全用户信息保护制度</u>。
+- **第四十五条**    <u>依法负有网络安全监督管理职责的部门及其工作人员，必须对在履行职责中知悉的个人信息、隐私和商业秘密严格保密</u>，不得泄露、出售或者非法向他人提供。
+- **第四十七条**    <u>**网络运营者应当加强对其用户发布的信息的管理，发现法律、行政法规禁止发布或者传输的信息的，应当立即停止传输该信息，采取消除等处置措施，防止信息扩散，保存有关记录，并向有关主管部门报告。**</u>
+- **第五十条**    <u>国家网信部门和有关部门依法履行网络信息安全监督管理职责，发现法律、行政法规禁止发布或者传输的信息的，应当要求网络运营者停止传输，采取消除等处置措施，保存有关记录：对来源于中华人民共和国境外的上述信息，应当通知有关机构采取技术措施和其他必要措施阻断传播。</u>
+
+**第五章    监测预警与应急处置**
+
+- **第五十六条**    **省级以上人民政府有关部门**在履行网络安全监督管理职责中，发现网络存在较大安全风险或者发生安全事件的，可以按照规定的权限和程序对该网络的运营者的法定代表人或者主要负责人进行约谈。网络运营者应当按照要求采取措施，进行整改，消除隐患。
+- **第五十八条    <u>因维护国家安全和社会公共秩序，处置重大突发社会安全事件的需要，经国务院决定或者批准，可以在特定区域对网络通信采取限制等临时措施。</u>**
+
+**第六章    法律责任**
+
+- **第六十一条**    网络运营者违反本法第二十四条第一款规定，<u>未要求用户提供真实身份信息，或者对不提供真实身份信息的用户提供相关服务的，由有关主管部门责令改正；拒不改正或者情节严重的，**处五万元以上五十万元以下罚款**，</u>并可以由有关主管部门责令暂停相关业务、停业整顿、关闭网站、吊销相关业务许可证或者吊销营业执照，对直接负责的主管人员和其他直接责任人员处一万元以上十万元以下罚款。
+
+- **第六十二条**    违反本法第二十六条规定，<u>开展网络安全认证、检测、风险评估等活动，或者向社会发布系统漏洞、计算机病毒、网络攻击、网络侵入等网络安全信息的，由有关主管部门责令改正，给予警告；拒不改正或者情节严重的，**处一万元以上十万元以下罚款**，</u>并可以由有关主管部门责令暂停相关业务、停业整顿、关闭网站、吊销相关业务许可证或者吊销营业执照，对直接负责的主管人员和其他直接责任人员处五千元以上五万元以下罚款。
+
+- **第六十三条**    违反本法第二十七条规定，<u>从事危害网络安全的活动，或者提供专门用于从事危害网络安全活动的程序、工具，或者为他人从事危害网络安全的活动提供技术支持、广告推广、支付结算等帮助，尚不构成犯罪的，由公安机关没收违法所得，处五日以下拘留，可以并处五万元以上五十万元以下罚款；情节较重的，处五日以上十五日以下拘留，可以并处十万元以上一百万元以下罚款。</u>单位有前款行为的，由公安机关没收违法所得，处十万元以上一百万元以下罚款，并对直接负责的主管人员和其他直接责任人员依照前款规定处罚。
+
+  <u>违反本法第二十七条规定，受到治安管理处罚的人员，五年内不得从事网络安全管理和网络运营关键岗位的工作；受到刑事处罚的人员，终身不得从事网络安全管理和网络运营关键岗位的工作。</u>
+
+- **第六十四条**    网络运营者、网络产品或者服务的提供者违反本法第二十二条第三款、第四十一条至第四十三条规定，<u>侵害个人信息依法得到保护的权利的，</u>由有关主管部门责令改正，可以根据情节单处或者并处警告、没收违法所得、<u>处违法所得一倍以上十倍以下罚款，</u>没有违法所得的，处一百万元以下罚款，对直接负责的主管人员和其他直接责任人员处一万元以上十万元以下罚款；情节严重的，并可以责令暂停相关业务、停业整顿、关闭网站、吊销相关业务许可证或者吊销营业执照。  
+
+  违反本法第四十四条规定，<u>窃取或者以其他非法方式获取、非法出售或者非法向他人提供个人信息，尚不构成犯罪的，</u>由公安机关没收违法所得，并<u>处违法所得一倍以上十倍以下罚款，</u>没有违法所得的，处一百万元以下罚款。
 
 
-###  2.1.2.2 《中华人民共和国网络安全法》
+**第七章    附则**
+
+- **第七十六条    本法下列用语的含义：**
+  - （一）网络，是指由计算机或者其他信息终端及相关设备组成的按照一定的规则和程序对信息进行收集、存储、传输、交换、处理的系统。
+  - （二）<u>网络安全，是指通过采取必要措施，防范对网络的攻击、侵入、干扰、破坏和非法使用以及意外事故，使网络处于稳定可靠运行的状态，以及保障网络数据的完整性、保密性、可用性的能力。</u>
+  - （三）<u>网络运营者，是指网络的所有者、管理者和网络服务提供者。</u>
+  - （四）<u>网络数据，是指通过网络收集、存储、传输、处理和产生的各种电子数据。</u>
+  - （五）个人信息，是指以电子或者其他方式记录的能够单独或者与其他信息结合识别自然人个人身份的各种信息，包括但不限于自然人的姓名、出生日期、身份证件号码、个人生物识别信息、住址、电话号码等。
+
+[返回目录](#2.1 信息安全法律法规)
+
+### 2.1.2.3  《中华人民共和国计算机信息系统安全保护条例》
+
+1994年2月18日中华人民共和国国务院令第147号发布了**《中华人民共和国计算机信息系统安全保护条例》**。
+   其中，重要条款如下：
+
+**第一章    总则**
+
+- **第二条**    本条例所称的计算机信息系统，是指由计算机及其相关的和配套的设备、设施(含网络)构成的，按照一定的应用目标和规则对信息进行采集、加工、存储、传输、检索等处理的人机系统。
+
+- **第三条**    计算机信息系统的安全保护，应当保障计算机及其相关的和配套的设备、设施(含网络)的安全，运行环境的安全，保障信息的安全，保障计算机功能的正常发挥，以维护计算机信息系统的安全运行。
+
+- **第四条**    计算机信息系统的安全保护工作，重点维护国家事务、经济建设、国防建设、尖端科学技术等重要领域的计算机信息系统的安全。
+
+- **第六条**    公安部主管全国计算机信息系统安全保护工作。
+
+  国家安全部、国家保密局和国务院其他有关部门，在国务院规定的职责范围内做好计算机信息系统安全保护的有关工作。
+
+**第二章    安全保护制度**
+
+- **第九条**    <u>**计算 息系统实行安全等级保护**。</u>安全等级的划分标准和安全等级保护的具体办法，由公安部会同有关部门制定。
+
+- **第十条**    <u>**计算机机房应当符合国家标准和国家有关规定**。</u>
+
+  在计算机机房附近施工，不得危害计算机信息系统的安全。
+
+- **第十一条**    <u>**进行国际联网的计算机信息系统，由计算机信息系统的使用单位报省级以上人民政府公安机关备案**。</u>
+
+- **第十二条**    <u>运输、携带、邮寄计算机信息媒体进出境的，应当如实向海关申报。</u>
+
+- **第十三条**    计算机信息系统的使用单位应当<u>**建立健全安全管理制度**</u>，负责本单位计算机信息系统的安全保护工作。
+
+- **第十四条**    对计算机信息系统中发生的案件，有关使用单位应当在<u>**24小时**</u>内向当地县级以上人民政府公安机关报告。
+
+- **第十五条**    对计算机病毒和危害社会公共安全的其他有害数据的防治研究工作，由公安部归口管理。
+
+- **第十六条**    <u>**国家对计算机信息系统安全专用产品的销售实行许可证制度**</u>。具体办法由公安部会同有关部门制定。
+
+**第三章    安全监督**
+
+- **第十七条**    公安机关对计算机信息系统安全保护工作行使下列监督职权：
+  - <u>**（一）监督、检查、指导计算机信息系统安全保护工作；**</u>
+  - <u>**（二）查处危害计算机信息系统安全的违法犯罪案件；**</u>
+  - <u>**（三）履行计算机信息系统安全保护工作的其他监督职责。**</u>
+- **第十八条**    公安机关发现影响计算机信息系统安全的隐患时，应当及时通知使用单位采取安全保护措施。
+- **第十九条**    公安部在紧急情况下，可以就涉及计算机信息系统安全的特定事项发布专项通令。
+
+**第四章    法律责任**
+
+- **第二十条**    违反本条例的规定，有下列行为之一的，由公安机关处以警告或者停机整顿：
+  - <u>**（一）违反计算机信息系统安全等级保护制度，危害计算机信息系统安全的；**</u>
+  - <u>**（二）违反计算机信息系统国际联网备案制度的；**</u>
+  - <u>**（三）不按照规定时间报告计算机信息系统中发生的案件的；**</u>
+  - <u>**（四）接到公安机关要求改进安全状况的通知后，在限期内拒不改进的；**</u>
+  - <u>**（五）有危害计算机信息系统安全的其他行为的。**</u>
+
+**第五章    附则**
+
+- **第二十八条**    本条例下列用语的含义：
+  - 计算机病毒，是指编制或者在计算机程序中插入的破坏计算机功能或者毁坏数据，影响计算机使用，并能自我复制的一组计算机指令或程序代码。
+  - 计算机信息系统安全专用产品，是指用于保护计算机信息系统安全的专用硬件和软件产品。
+
+[返回目录](#2.1 信息安全法律法规)
+
+### 2.1.2.4 其他安全法律法规
+
+| 类别                   | 具体法律法规                                                 |
+| :--------------------- | ------------------------------------------------------------ |
+| 互联网                 | 《中华人民共和国计算机信息网络国际联网管理暂行规定》<br />《中华人民共和国计算机信息网络国际联网管理暂行规定实施办法》<br />《计算机信息系统国际联网保密管理规定》 |
+| 商用密码               | 《商用密码管理条例》                                         |
+| 安全专用产品与病毒防治 | 《计算机信息系统安全专用产品检测和销售许可证管理办法》(计算机信息系统安全专用产品进入市场，先填写《计算机信息系统安全专用产品检测结果报告》，再申请《计算机信息系统安全专用产品销售许可证》；反病毒类产品，还需公安部备案和许可)<br />《计算机病毒防治管理办法》 |
+| 电子签名               | 《中华人民共和国电子签名法》                                 |
+| 电子政务               | 《中华人民共和国电子政务法》(专家建议稿)、<br />《政务信息工作暂行办法》<br />《中华人民共和国政府信息公开条例》 |
+
+
+
+[返回目录](#2.1 信息安全法律法规)
+
+------
+
+
+
+## 2.1.3 安全政策
+
+### 2.1.3.1 《信息安全等级保护管理办法》
+
+《信息安全等级保护管理办法》(公通字200743号文)是为规范信息安全等级保护管理，提高信息安全保障能力和水平，维护国家安全、社会稳定和公共利益，保障和促进信息化建设，根据**《中华人民共和国计算机信息系统安全保护条例》**等有关法律法规而制定的办法。由四部委下发。
+
+该办法重要条款如下：
+
+- **第七条**    **信息系统的安全保护等级分为以下五级（重点）：**
+
+  - <u>**第一级**，信息系统受到破坏后，会对公民、法人和其他组织的合法权益造成损害，但不损害国家安全、社会秩序和公共利益。</u>
+  - <u>**第二级**，信息系统受到破坏后，会对公民、法人和其他组织的合法权益产生**严重损害**，或者对社会秩序和公共利益造成损害，但不损害国家安全。</u>
+  -  <u>**第三级**，信息系统受到破坏后，会对社会秩序和公共利益造成严重损害，或者对国家安全造成损害。</u>
+  - <u>**第四级**，信息系统受到破坏后，会对社会秩序和公共利益造成特别严重损害，或者对国家安全造成严重损害。</u>
+  - <u>**第五级**，信息系统受到破坏后，会对国家安全造成特别严重损害。</u>
+
+- **第八条**    **信息系统运营、使用单位依据本办法和相关技术标准对信息系统进行保护，国家有关信息安全监管部门对其信息安全等级保护工作进行监督管理。**
+
+  - **第一级**    <u>信息系统运营、使用单位应当依据国家有关管理规范和技术标准进行保护。</u>
+  - **第二级**    <u>信息系统运营、使用单位应当依据国家有关管理规范和技术标准进行保护。国家信息安全监管部门对该级信息系统信息安全等级保护工作进行**指导**。</u>
+  - **第三级**    <u>信息系统运营、使用单位应当依据国家有关管理规范和技术标准进行保护。国家信息安全监管部门对该级信息系统信息安全等级保护工作进行**监督、检查**。</u>
+  - **第四级**    <u>信息系统运营、使用单位应当依据国家有关管理规范、技术标准和业务专门需求进行保护。国家信息安全监管部门对该级信息系统信息安全等级保护工作进行**强制监督、检查**。</u>
+  - **第五级**    <u>信息系统运营、使用单位应当依据国家管理规范、技术标准和业务特殊安全需求进行保护。国家指定专门部门对该级信息系统信息安全等级保护工作进行**专门监督、检查**。</u>
+
+- **第十四条**    信息系统建设完成后，运营、使用单位或者其主管部门应当选择符合本办法规定条件的测评机构，依据《信息系统安全等级保护测评要求》等技术标准，定期对信息系统安全等级状况开展等级测评。<u>**第三级信息系统应当每年至少进行一次等级测评，第四级信息系统应当每半年至少进行一次等级测评**，第五级信息系统应当依据特殊安全需求进行等级测评。</u>
+
+  信息系统运营、使用单位及其主管部门应当定期对信息系统安全状况、安全保护制度及措施的落实情况进行自查。**第三级信息系统应当每年至少进行一次自查，第四级信息系统应当每半年至少进行一次自查，第五级信息系统应当依据特殊安全需求进行自查。**
+
+  经测评或者自查，信息系统安全状况未达到安全保护等级要求的，运营、使用单位应当制定方案进行整改。
+
+- **第十五条**    已运营(运行)或新建的第二级以上信息系统，应当在**安全保护等级确定后30日内**，由其运营、使用单位到所在地设区的市级以上公安机关办理备案手续。
+
+  隶属于中央的在京单位，其跨省或者全国统一联网运行并由主管部门统一定级的信息系统，由主管部门向公安部办理备案手续。跨省或者全国统一联网运行的信息系统在各地运行、应用的分支系统，应当向当地设区的市级以上公安机关备案。
+
+- **第十八条**    受理备案的公安机关应当对第三级、第四级信息系统的运营、使用单位的信息安全等级保护工作情况进行检查。**对第三级信息系统每年至少检查一次，对第四级信息系统每半年至少检查一次。**对跨省或者全国统一联网运行的信息系统的检查，应当会同其主管部门进行。
+
+  **对第五级信息系统，应当由国家指定的专门部门进行检查。**
+
+- **第二十二条**    **第三级**以上信息系统应当选择符合下列条件的等级保护测评机构进行测评：
+
+  - （一）在中华人民共和国境内注册成立(港澳台地区除外)
+  - （二）由中国公民投资、中国法人投资或者国家投资的企事业单位(港澳台地区除外)
+  - （三）从事相关检测评估工作两年以上，无违法记录
+  - （四）工作人员仅限于中国公民
+  - （五）法人及主要业务、技术人员无犯罪记录
+  - （六）使用的技术装备、设施应当符合本办法对信息安全产品的要求
+  - （七）具有完备的保密管理、项目管理、质量管理、人员管理和培训教育等安全管理制度
+  - （八）对国家安全、社会秩序、公共利益不构成威胁。
+
+- **第二十五条**    涉密信息系统按照所处理信息的最高密级，由低到高分为**秘密、机密、绝密**三个等级。
+
+  涉密信息系统建设使用单位应当在信息规范定密的基础上，依据**涉密信息系统分级保护管理办法**和**国家保密标准BMB 17-2006《涉及国家秘密的计算机信息系统分级保护技术要求》**确定系统等级。对于包含多个安全域的涉密信息系统，各安全域可以分别确定保护等级。
+
+  保密工作部门和机构应当监督指导涉密信息系统建设使用单位准确、合理地进行系统定级。
+
+- **第二十七条**    涉密信息系统建设使用单位应当选择具有涉密集成资质的单位承担或者参与涉密信息系统的设计与实施。
+
+  涉密信息系统建设使用单位应当依据涉密信息系统分级保护管理规范和技术标准，按照<u>**秘密、机密、绝密**</u>三级的不同要求，结合系统实际进行方案设计，实施分级保护，<u>**其保护水平总体上不低于国家信息安全等级保护第三级、第四级、第五级的水平**</u>。
+
+[返回目录](#2.1 信息安全法律法规)
+
+### 2.1.3.2 《计算机信息系统安全保护等级划分准则》
 
