--- a/信息安全工程师/md/2.1 信息安全法律法规.md
+++ b/信息安全工程师/md/2.1 信息安全法律法规.md
@@ -101,7 +101,7 @@
 
 [返回目录](#2.1 信息安全法律法规)
 
-###  2.1.2.2  《中华人民共和国网络安全法》
+###  2.1.2.2 《中华人民共和国网络安全法》
 
 2016年11月7日第十二届全国人民代表大会常务委员会第二十四次会议通过了**《中华人民共和国网络安全法》**，自**2017年6月1日**起施行。
 
@@ -177,7 +177,7 @@
 
 [返回目录](#2.1 信息安全法律法规)
 
-### 2.1.2.3  《中华人民共和国计算机信息系统安全保护条例》
+### 2.1.2.3 《中华人民共和国计算机信息系统安全保护条例》
 
 1994年2月18日中华人民共和国国务院令第147号发布了**《中华人民共和国计算机信息系统安全保护条例》**。
    其中，重要条款如下：
@@ -320,4 +320,198 @@
 [返回目录](#2.1 信息安全法律法规)
 
 ### 2.1.3.2 《计算机信息系统安全保护等级划分准则》
+
+《计算机信息系统安全保护等级划分准则》（GGB17859-1999）规定了计算机系统安全保护能力的五个等级，分别是：**用户自主保护级；系统审计保护级；安全标记保护级；结构化保护级；访问验证保护级**。
+
+**第一级    用户自主保护级**
+
+- 本级的计算机信息系统可信计算基通过隔离用户与数据，使用户具备自主安全保护的能力。它具有多种形式的控制能力，对用户实施访问控制，即为用户提供可行的手段，保护用户和用户组信息，避免其他用户对数据的非法读写与破坏。
+
+**第二级    系统审计保护级**
+
+- 与用户自主保护级相比，本级的计算机信息系统可信计算基实施了粒度更细的自主访问控制，它通过登录规程、审计安全性相关事件和隔离资源使用户对自己的行为负责。
+
+**第三级    安全标记保护级**
+
+- 本级的计算机信息系统可信计算基具有系统审计保护级所有功能。此外，还提供有关安全策略模型、数据标记以及主体对客体强制访问控制的非形式化描述；具有准确地标记输出信息的能力；消除通过测试发现的任何错误。
+-  这个级别的特点是，计算机信息系统可信计算基对所有主体及其所控制的客体（例如进程、文件、设备）实施强制访问控制。该级别要求为主体及客体提供敏感标记，这类标记为等级、非等级的分类组合，是实施强制访问控制的依据。
+
+
+**第四级    结构化保护级**
+
+- 本级的计算机信息系统可信计算基建立于一个明确定义的形式化安全策略模型之上，它**要求将第三级系统中的自主和强制访问控制扩展到所有主体与客体**。此外，**还要考虑隐蔽通道**。本级的计算机信息系统可信计算基必须结构化为关键保护元素和非关键保护元素。计算机信息系统可信计算基的接口也必须明确定义，使其设计与实现能经受更充分的测试和更完整的复审。加强了鉴别机制；支持系统管理员和操作员的职能；提供可信设施管理；增强了配置管理控制。系统具有相当的抗渗透能力。
+
+**第五级    访问验证保护级**
+
+- 本级的计算机信息系统可信计算基满足访问监控器需求。访问监控器仲裁主体对客体的全部访问。访问监控器本身是抗篡改的；必须足够小，能够分析和测试。为了满足访问监控器需求，计算机信息系统可信计算基在其构造时，排除那些对实施安全策略来说并非必要的代码；在设计和实现时，从系统工程角度将其复杂性降低到最小程度。支持安全管理员职能：扩充审计机制，当发生与安全相关的事件时发出信号；提供系统恢复机制。系统具有很高的抗渗透能力。
+-  注：计算机信息系统可信计算基是计算机系统内保护装置的总体，包括硬件、固件、软件和负责执行安全策略的组合体.
+
+
+[返回目录](#2.1 信息安全法律法规)
+
+### 2.1.3.3 涉密信息系统的分级保护
+
+涉密信息系统的划分参见《信息安全等级保护管理办法》的第二十七条。
+
+涉密信息系统分级保护分为八个阶段：系统定级、安全规划方案设计、安全工程实施、信息系统评测、信息系统审批、安全运行及维护、定期评测与检查、系统隐退终止。
+
+
+
+[返回目录](#2.1 信息安全法律法规)
+
+------
+
+
+
+## 2.1.4 知识产权
+
+### 2.1.4.1 《中华人民共和国著作权法》
+
+《中华人民共和国著作权法》是为了保护文学、艺术和科学作品作者的著作权及与著作权有关的权益。《中华人民共和国著作权法》中涉及到的作品的概念是文学、艺术和自然科学、社会科学、工程技术等作品，具体来说，这些作品包括以下九类：
+
+- （1）文字作品：包括小说、散文、诗词和论文等表现形式的作品。
+- （2）口述作品：如演说、辩论等以口头形式表现的作品。
+- （3）音乐、戏剧、曲艺、舞蹈、杂技艺术作品。
+- （4）美术、建筑作品、摄影作品。
+- （5）电影作品和以类似摄制电影的方法创作的作品。
+- （6）工程设计图、产品设计图、地图、示意图等图形作品和模型作品。
+- （7）地图、示意图等图形作品。
+- （8）计算机软件。
+- （9）法律、行政法规规定的其他作品。
+
+计算机软件著作权是指软件的开发者或其他权利人依据有关著作权法律的规定，对软件作品所享有的各项专有权利。就权利的性质而言是一种民事权利，具备民事权利的基本特征。著作权是知识产权中的一种特殊情况，因为著作权的取得无须经过别人确认，这就是所谓的“自动保护”原则，软件经过登记后，软件著作权人即享有发表权、开发者身份权、使用权、使用许可权和获得报酬权。
+
+1. **著作权人及其权利**
+
+   著作权法中的著作权人包括作者或能合法取得著作权的公民、法人或组织。著作权的人身权和财产权就是所谓的版权，包括以下具体权力：
+
+   - 发表权：决定是否公之于众的权利。
+   - 署名权：表明作者身份，在作品上署名的权利。
+   - 修改权：修改或者授权他人修改作品的权利。
+   - 保护作品完整权：保护作品不受篡改的权利。
+   - 复制权：以印刷、复印、录音、录像、翻拍等方式将作品制作一份或多份的权利。
+   - 发行权：以出售或者赠与方式向公众提供作品的原件或复制件的权利。
+   - 出租权：有偿许可他人临时使用电影作品或以类似摄制电影的方法创作的作品的权利。
+   - 展览权：公开陈列美术作品、摄影作品的原件或复制件的权利。
+   - 表演权：公开表演作品，以及用各种手段公开播送作品的表演的权利。
+   - 放映权：通过放映机、幻灯机等技术设备公开再现美术、摄影、电影和以类似摄制电影的方法创作的作品等权利。
+   - 广播权：以无线方式公开广播，以有线传播或转播的方式向公众传播广播的作品的权利。
+   - 信息网络传播权：以有线或无线方式向公众提供作品，使公众可以在其个人选定的时间和地点获得作品的权利。
+   - 摄制权：以摄制电影或者以类似摄制电影的方法将作品固定在载体上的权利。
+   - 改编权：改变作品，创作出具有独创性的新作品的权利。
+   - 翻译权：将作品从一种语言文字转换成另一种语言文字的权利。
+   - 汇编权：将作品或作品的片段通过选择或者编排汇集成新作品的权利。
+
+   创作作品的公民是作者。由法人或其他组织主持，代表法人或其他组织意志创作，并由法人或其他组织承担责任的作品，法人或其他组织视为作者。通常在作品上署名的公民、法人或其他组织为作者。
+
+2. **权利的保护期限**
+
+   - 著作权利中作者的署名权、修改权、保护作品完整权的保护期不受限制。
+   - 公民的作品，其发表权及其他相关权利的保护期为作者终生及其死亡后五十年，截止于作者死亡后第五十年的12月3l日；若是合作作品，则截止于最后死亡的作者死亡后第五十年的12月31日。
+   - 法人或者其他组织的作品、著作权（署名权除外）由法人或者其他组织享有的职务作品，其发表权及其他相关权利的保护期为五十年，截止于作品首次发表后第五十年的12月31日，但作品自创作完成后五十年内未发表的不再保护。
+   - 电影作品和以类似摄制电影的方法创作的作品、摄影作品，其发表权及其他相关权利的保护期为五十年，截止于作品首次发表后第五十年的12月31日，但作品自创作完成后五十年内未发表的，不再保护。
+
+3. **权利的限制**
+
+   在下列情况下使用作品可以不经著作权人许可，不向其支付报酬，但应当指明作者姓名和作品名称，并且不得侵犯著作权人依照
+
+   本法享有的其他权利：
+
+   - 为个人学习、研究或者欣赏，使用他人已经发表的作品。
+   - 介绍、评论某一作品或者说明某一问题，在作品中适当引用他人已经发表的作品。
+   - 报道时事新闻，在报纸、期刊、电台等媒体中不可避免地再现或者引用已经发表的作品。
+   - 报纸、期刊、广播电台、电视台等媒体刊登或者播放其他报纸、期刊、广播电台、电视台等媒体已经发表的关于政治、经济、宗教问题的时事性文章，但作者声明不许刊登、播放的除外。
+   - 报纸、期刊、广播电台、电视台等媒体刊登或者播放在公众集会上发表的讲话，但作者声明不许刊登、播放的除外。
+   - 为学校课堂教学或科学研究翻译或者少量复制已经发表的作品，供教学或科研人员使用，但不得出版发行。
+   - 国家机关为执行公务在合理范围内使用已经发表的作品。
+   - 图书馆、档案馆、纪念馆、博物馆、美术馆等为陈列或者保存版本的需要，复制本馆收藏的作品。
+   - 免费表演已经发表的作品，该表演未向公众收取费用，也未向表演者支付报酬。
+   - 对设置或陈列在室外公共场所的艺术作品进行临摹、绘画、摄影、录像。
+   - 将中国公民、法人或其他组织已经发表的以汉语言文字创作的作品翻译成少数民族语言文字作品在国内出版发行。
+   - 将已经发表的作品改成盲文出版。
+
+   以上规定适用于对出版者、表演者、录音录像制作者、广播电台、电视台的权利的限制。为实施九年制义务教育和国家教育规划而编写出版教科书，除作者事先声明不许使用的外，可以不经著作权人许可，在教科书中汇编已经发表的作品片段，短小的文字作品、音乐作品或单幅的美术作品、摄影作品，但应当按照规定支付报酬，指明作者姓名和作品名称，并且不得侵犯著作权人的其他权利。
+
+4. **侵权的判断**
+
+   <u>**软考考试中对著作权的考查，往往是以案例的形式考查考生是否掌握了如何判断侵权行为。**</u>因此这一节中提到的侵权行为必须要充分掌握。对计算机软件侵权行为的认定，实际是指对发生争议的某一个计算机程序与具有明确权利的正版程序的对比和鉴别。
+
+   凡是侵权人主观上具有故意或过失对著作权法和计算机软件保护条例保护的软件人身权和财产权实施侵害行为的，都构成计算机软件的侵权行为。对著作权侵权行为的判断主要基于以下几个方面：
+
+   - **（1）未经软件著作权人的同意而发表其软件作品。**软件著作人享有对软件作品的公开发表权，未经允许，著作权人以外的任何人都无权擅自发表特定的软件作品。这种行为侵犯著作权人的**发表权**。
+   - **（2）将他人开发的软件当作自己的作品发表。**这种行为的构成主要是行为人欺世盗名，剽窃软件开发者的劳动成果，将他人开发的软件作品假冒为自己的作品而署名发表。只要行为人实施了这种行为，不管其发表该作品是否经过软件著作人的同意都构成侵权。这种行为侵犯了**身份权和署名权**。
+   - **（3）未经合作者的同意将与他人合作开发的软件当作自己独立完成的作品发表。**这种侵权行为发生在软件作品的合作开发者之间。作为合作开发的软件，软件作品的开发者身份为全体开发者，软件作品的发表权也应由全体开发者共同行使。如果未经其他开发者同意，将合作开发的软件当作自己的独创作品发表即构成侵权。
+   - **（4）在他人开发的软件上署名或者涂改他人开发的软件上的署名。**这种行为是在他人开发的软件作品上添加自己的署名，替代软件开发者署名或者将软件作品上开发者的署名进行涂改的行为。这种行为侵犯**身份权和署名权**。
+   - **（5）未经软件著作权人的同意修改、翻译、注释其软件作品。**这种行为侵犯了著作权人的使用权中的**修改权、翻译权与注释权**。对不同版本的计算机软件，新版本往往是旧版本的提高和改善。这种提高和改善应认定为对原软件作品的修改和演绎。这种行为应征求原版本著作权人的同意，否则构成侵权。如果征得软件作品著作人的同意，因修改和改善新增加的部分，创作者应享有著作权。**职务作品的计算机软件，参与开发的人员离开原单位后，如其对原单位享有著作权的软件进行修改、提高，应经过原单位许可，否则构成侵权。**软件程序员接受第一个单位委托开发完成一个软件，又接受第二个单位委托开发功能类似的软件，仅将受第一个单位委托开发的软件略作改动即算完成提交给第二个单位，这种行为也构成侵权。
+   - **（6）未经软件著作权人的同意，复制或部分复制其软件作品。**这种行为侵犯了著作权人的使用权中的**复制权**。计算机软件的复制权是计算机软件最重要的著作财产权，也是通常计算机软件侵权行为的对象。这是由于软件载体价格相对低廉，复制软件简单易行、效率极高，而销售非法复制的软件即可获得高额利润。因此，复制是最为常见的侵权行为，是防止和打击的主要对象。当软件著作权经当事人的约定合法转让给转让者后，软件开发者未经允许不得复制该软件，否则也构成侵权。
+   - **（7）未经软件著作权人同意，向公众发行、展示其软件的复制品。**这种行为侵犯了**发行权与展示权**。
+   - **（8）未经软件著作权人同意，向任何第三方办理软件权利许可或转让事宜。**这种行为侵犯了**许可权和转让权**。
+
+   
+
+   [返回目录](#2.1 信息安全法律法规)
+
+### 2.1.4.2 《计算机软件保护条例》
+
+《计算机软件保护条例》于2001年12月20日以中华人民共和国国务院令第339号公布，根据2013年1月30日中华人民共和国国务院令第632号《国务院关于修改〈计算机软件保护条例〉的决定》第2次修订。
+
+《计算机软件保护条例》，软件受保护的前提条件是**原创性、可感知性、可再现性（可复制性）**。其重要条款如下：
+
+**第三条    本条例下列用语的含义：**
+
+- （一）计算机程序，是指为了得到某种结果而可以由计算机等具有信息处理能力的装置执行的代码化指令序列，或者可以被自动转换成代码化指令序列的符号化指令序列或者符号化语句序列。**同一计算机程序的源程序和目标程序为同一作品。**
+- （二）文档，是指用来描述程序的内容、组成、设计、功能规格、开发情况、测试结果及使用方法的文字资料和图表等，如程序设计说明书、流程图、用户手册等。
+- （三）软件开发者，是指实际组织开发、直接进行开发，并对开发完成的软件承担责任的法人或者其他组织；或者依靠自己具有的条件独立完成软件开发，并对软件承担责任的自然人。
+- （四）软件著作权人，是指依照本条例的规定，对软件享有著作权的自然人、法人或者其他组织。
+
+**第四条**    受本条例保护的软件必须由开发者独立开发，并已**固定在某种有形物体上（可感知性）**。
+
+**第六条**    本条例对软件著作权的保护不延及开发软件所用的思想、处理过程、操作方法或者数学概念等。
+
+[返回目录](#2.1 信息安全法律法规)
+
+### 2.1.4.3 《计算机软件著作权登记办法》
+
+《计算机软件著作权登记办法》重要条款如下：
+
+**第三条**    本办法适用于软件著作权登记、软件著作权专有许可合同和转让合同登记。
+
+**第九条**    申请软件著作权登记的，应当向中国版权保护中心提交以下材料：
+
+- （一）按要求填写的软件著作权登记申请表；
+- （二）软件的鉴别材料；
+- （三）相关的证明文件。
+
+**第十条**    软件的鉴别材料包括程序和文档的鉴别材料。
+
+程序和文档的鉴别材料应当由源程序和任何一种文档前、后各连续30页组成。整个程序和文档不到60页的，应当提交整个源程序和文档。除特定情况外，程序每页不少于50行，文档每页不少于30行。
+
+[返回目录](#2.1 信息安全法律法规)
+
+### 2.1.4.4 《信息网络传播权保护条例》
+
+《信息网络传播权保护条例》重要条款如下：
+
+**第九条**    为扶助贫困，通过信息网络向农村地区的公众免费提供中国公民、法人或者其他组织已经发表的种植养殖、防病治病、防灾减灾等与扶助贫困有关的作品和适应基本文化需求的作品，网络服务提供者应当在提供前公告拟提供的作品及其作者、拟支付报酬的标准。自公告之日起30日内，著作权人不同意提供的，网络服务提供者不得提供其作品；自公告之日起满30日，著作权人没有异议的，网络服务提供者可以提供其作品，并按照公告的标准向著作权人支付报酬。网络服务提供者提供著作权人的作品后，著作权人不同意提供的，网络服务提供者应当立即删除著作权人的作品，并按照公告的标准向著作权人支付提供作品期间的报酬。
+
+**第十二条**    属于下列情形的，可以避开技术措施，但不得向他人提供避开技术措施的技术、装置或者部件，不得侵犯权利人依法享有的其他权利：
+
+- （一）为学校课堂教学或者科学研究，通过信息网络向少数教学、科研人员提供已经发表的作品、表演、录音录像制品，而该作品、表演、录音录像制品只能通过信息网络获取；
+- （二）不以营利为目的，通过信息网络以盲人能够感知的独特方式向盲人提供已经发表的文字作品，而该作品只能通过信息网络获取；
+- （三）国家机关依照行政、司法程序执行公务；
+- （四）在信息网络上对计算机及其系统或者网络的安全性能进行测试。
+
+**第二十六条**    本条例下列用语的含义：
+
+- 信息网络传播权，是指以有线或者无线方式向公众提供作品、表演或者录音录像制品，使公众可以在其个人选定的时间和地点获得作品、表演或者录音录像制品的权利。
+
+- 技术措施，是指用于防止、限制未经权利人许可浏览、欣赏作品、表演、录音录像制品的或者通过信息网络向公众提供作品、表演、录音录像制品的有效技术、装置或者部件。
+
+- 权利管理电子信息，是指说明作品及其作者、表演及其表演者、录音录像制品及其制作者的信息，作品、表演、录音录像制品权利人的信息和使用条件的信息，以及表示上述信息的数字或者代码。
+
+
+
+[返回目录](#2.1 信息安全法律法规)
+
+------
 
