--- a/education/md文件/中学教学/教学过程（重点）.md
+++ b/education/md文件/中学教学/教学过程（重点）.md
@@ -138,7 +138,7 @@
 
    在教学中，既不能只强调训练学生的思维方式，忽视知识的传授；也不能只向学生传授对实际生活有用的知识，忽视学生的能力训练。要把**二者有机结合**起来，才能提高教学质量。
 
-### （三）教师的主导作用与学生的主体作用用统一的规律（双边性规律）【理解、运用】
+### （三）教师的主导作用与学生的主体作用相统一的规律（双边性规律）【理解、运用】
 
 教学过程中既要充分注重教师的教，也要充分调动学生学的积极性，使**教师的主导作用与学生的主体作用**有机结合，取得良好的教学效果。
 
