--- a/education/md文件/简答题.md
+++ b/education/md文件/简答题.md
@@ -219,3 +219,138 @@
 教材是教师进行教学的主要依据，它为教师备课、上课、布置作业和评定学生学习成绩提供了基本材料。熟练地掌握教材内容是教师顺利完成教学任务的重要条件。
 
 [返回目录](#简答题)
+
+------
+
+
+
+## 第三章 中学教学
+
+### （一）简述传授知识与发展智力之间的辩证关系
+
+**参考答案：**
+
+传授知识与发展智力相统一。
+
+①掌握知识是发展能力的基础，学生认识能力的发展有赖于知识的掌握。
+
+②发展能力是掌握知识的重要条件，学生掌握知识的速度与质量，依赖于学生原有能力水平。
+
+③知识与能力相互依存、相互促进，但知识不等同于智力或能力，知识掌握的多少，并不一定都与能力发展水平成正比。
+
+[返回目录](#简答题)
+
+### （二）教学过程有哪些基本规律？
+
+**参考答案：**
+
+直接经验与间接经验相统一的规律（间接性规律、学生认识的特殊性规律）
+
+掌握知识与发展能力（智力）相统一的规律（发展性规律）
+
+教师的主导作用与学生的主体作用相统一的规律（双边性规律）
+
+传授知识与思想教育相统一的规律（教育性规律、教学的教育性规律）
+
+[返回目录](#简答题)
+
+### （三）教师备课的基本要求有哪些？
+
+**参考答案：**
+
+1. **做好三方面的工作(三备)**
+
+   **（1）钻研教材(备教材)**
+
+   **（2）了解学生(备学生)**
+
+   **（3）设计教法(备教法)**
+
+2. **写好三个计划**
+
+   **（1）学期（或学年）教学进度计划**
+
+   **（2）课题（或单元）计划**
+
+   **（3）课时计划（教案）**
+
+[返回目录](#简答题)
+
+### （四）一堂好课的基本标准有哪些？
+
+**参考答案：**
+
+- **目标明确**。目标制定得当，符合课程标准的要求及学生的实际；课堂上的一切教学活动都应该围绕教学目的来进行。
+- **内容正确**。教师要保证教学内容的科学性和思想性。
+- **方法得当**。教师应根据教学任务、内容和学生的特点选择合适的方法进行教学。教师要善于选择方法，创造性地加以运用，力求使教学取得较好的效果。
+- **结构合理**。教师教学有严密的计划性和组织性。课的进程次序分明、有条不紊，课的结构紧凑，不同任务变换时过渡自然，课堂秩序良好。
+- **语言艺术**。教师授课讲普通话，语言简洁、明快、生动，有条理，有逻辑性，语调抑扬顿挫。
+- **板书有序**。板书在形式上应字迹规范、清楚、位置适宜；板书在内容上应重点突出、条理清晰。
+- **态度从容**。教师授课时应充满自信，适当应用肢体语言。
+- **充分发挥学生的主体性**。这是上好课的**最根本的要求**，离开了这一点，以上所有要求就都失去了意义。
+
+[返回目录](#简答题)
+
+### （五）简述学校教学工作的基本环节。
+
+**参考答案：**
+
+- **备课。**备课是教师教学工作的起始环节。
+- **上课。**上课是教学工作诸环节中的**中心环节**。
+- **课外作业的布置与批改。**课外作业是**课堂教学的延续和补充**。
+- **课外辅导。**
+- **学生学业成绩的检查与评定。**
+
+[返回目录](#简答题)
+
+### （六）简述贯彻科学性和思想性相统一的教学原则的基本要求。
+
+**参考答案：**
+
+- 保证教学的科学性。
+- 发掘教材的思想性，对学生进行品德教育。
+- 不断提高教师的专业水平和思想素质。
+
+[返回目录](#简答题)
+
+### （七）简述运用演示法的基本要求。
+
+**参考答案：**
+
+演示法是教师通过展示实物、直观教具，运用示范性实验或现代化视听手段，指导学生获得知识或巩固知识的教学方法。
+
+运用演示法的基本要求包括以下几点。
+
+- 教师要做好演示前的准备。
+- 教师要尽可能地调动学生的所有感官，使学生全面、立体地观察演示。
+- 教师要让学生明确演示的目的、要求和过程。
+- 教师要讲究演示的方法，及时辅以讲解。
+
+[返回目录](#简答题)
+
+### （八）简述班级授课制的优缺点。
+
+**参考答案：**
+
+班级授课制的优点：
+
+- 有利于经济有效地大面积培养人才，提高教学效率；
+- 有利于学生获得系统的科学知识；
+- 有利于发挥教师的主导作用；
+- 有利于发挥学生集体的教育作用；
+- 有利于学生德、智、体等多方面的发展；
+- 有利于进行教学管理和教学检查。
+
+缺点：
+
+- 不利于学生主体性的发挥；
+- 不利于培养学生的探索精神、创造能力和实际操作能力；
+- 不能很好地适应教学内容和教学方法的多样化；
+- 不利于因材施教，难以满足学生个性化的学习需要；
+- 不利于学生之间真正的交流和启发；
+- 以“课”为基本的教学活动单位，某些情况下会割裂内容的整体性。
+
+[返回目录](#简答题)
+
+------
+
