--- a/education/md文件/辨析题.md
+++ b/education/md文件/辨析题.md
@@ -226,3 +226,179 @@
 纵向组织与横向组织的侧重点不同，不能说纵向组织优于横向组织。
 
 [返回目录](#辨析题)
+
+------
+
+
+
+## 第三章 中学教学
+
+### （一）教学是学校实现教育目的的基本途径
+
+**参考答案：**
+
+这种说法是正确的。
+
+教学是在教育目的的规范下，由教师的教与学生的学共同组成的一种活动。
+
+教学能够为个人的全面发展提供科学的理论基础和实践经验，能够有目的、有计划地将教育的各个组成部分，包括德育、智育、体育、美育等基础知识和基本技能传授给学生，促进学生向预期的方向发展，实现教育目的。因此，教学是学校实现教育目的的基本途径。
+
+但教学不是实现教育目的的唯一途径。除了课堂教学之外，课外活动、社会实践活动等也是学校实现教育目的的途径。
+
+[返回目录](#辨析题)
+
+### （二）教学任务就是向学生传授知识
+
+**参考答案：**
+
+这种说法是错误的。
+
+传授系统的科学文化基础知识和基本技能是教学的首要任务。此外，教学还需要发展学生智力，培养学生的创造能力和实践能；发展学生体力，提高学生的健康水平；培养学生的社会主义品德和审美情趣，为其形成科学的世界观奠定基础；关注学生的个性发展。教学活动的任务具有多样性，不仅仅是向学生传授知识。
+
+因此，题干中的表述是错误的。
+
+[返回目录](#辨析题)
+
+### （三）学生知识越多，说明学生能力越强
+
+**参考答案：**
+
+这种说法是错误的。
+
+①掌握知识是发展能力的基础，学生认识能力的发展有赖于知识的掌握。
+
+②发展能力是掌握知识的重要条件，学生掌握知识的速度与质量，依赖于学生原有能力水平。
+
+③知识与能力相互依存、相互促进，但知识不等同于智力或能力，知识掌握的多少，并不一定都与能力发展水平成正比。
+
+从掌握知识到发展能力是一个非常复杂的过程，发展能力不仅与知识掌握的多少有关，而且与掌握知识的质量、获得知识的方法和思维方式的运用等有密切的关系，知识与能力不是同步发展的。
+
+因此，题干说法是错误的。
+
+[返回目录](#辨析题)
+
+### （四）教学中“授之以鱼”不如“授之以渔”
+
+**参考答案：**
+
+这种说法是正确的。
+
+授之以鱼”是指传授给学生知识，而“授之以渔”是指传授给学生学习的方法，发展学生的能力。
+
+在教学过程中，发展能力是掌握知识的重要条件。教学中教师应启发学生运用自己的潜在能力，使学生在掌握知识的过程中发展认识能力。
+
+认识能力具有普遍的迁移价值，它不但能有效地提高学生的学习效率和知识质量，推动学生进一步掌握知识，而且有利于促使学生将知识应用于社会实践活动，从而获得完整的知识。
+
+因此，在教学中，“授之以鱼”不如“授之以渔”
+
+[返回目录](#辨析题)
+
+### （五）强调学生的主体地位必然削弱教师的主导作用
+
+**参考答案：**
+
+这种说法是错误的。
+
+在教学过程中，教师的教影响着学生的学。学生的学也在不断促进并检验着教师的教，教学彼此相长。
+
+发挥教师的主导作用是引导学生学习知识、发展身心的必要条件；充分注重学生的主体地位，调动学生学习的积极性和主动性是使教学得以顺利进行的另一个必要条件。
+
+在教学过程中，教师为了学生的学习要发挥主导作用，学生在教师的主导作用下发挥学习的的积极性。学生学习的过程决定着教学内容内化的可能性和程度，学生这种学习的积极性不仅有利于知识的吸收、消化和掌握，而且能激发教师教学的热情、责任心、积极性和创造性，促进教师主导作用的充分发挥。
+
+因此，题干说法是错误的。
+
+[返回目录](#辨析题)
+
+### （六）教学具有教育性
+
+**参考答案：**
+
+这种说法是正确的。
+
+教学是教师向学生传授知识和学习方法的过程，也是对学生进行思想品德教育、培养学生成才的过程。
+
+教学必然要进行思想品德教育，这是由教学活动的特点决定的。构成教学活动的每个要素都包含着极其丰富的教育因素。这些教育因素在教学活动中发挥思想品德教育作用是客观存在的。
+
+教学过程一定会遵循传授知识与思想教育相统一的规律，从这方面看，在教学中，学生掌握知识的过程，就是教师传授知识与进行思想教育的过程。
+
+所以教学永远具有教育性。
+
+[返回目录](#辨析题)
+
+### （七）直观教学既是手段，也是目的。
+
+**参考答案：**
+
+这种说法是错误的。
+
+直观教学是指在教学中，教师利用学生的多种感官和已有的经验，通过各种形式的感知，丰富学生的直接经验和感性认识，使学生获得生动的表象，从而比较全面、深刻地掌握知识。
+
+其目的在于解决教学中词、概念、原理等理论知识与其所代表的事物之间相互脱离的矛盾。
+
+直观教学是一种教学手段而不是目的，不能为了直观而直观。只有在学生对教学内容比较生疏或学生在理解和掌握教学内容上遇到困难或障碍时，才需要教师运用直观手段。过多的直观不仅会浪费教学时间，分散学生的注意，还会阻碍学生抽象思维能力的发展。
+
+因此，题干说法是错误的。
+
+[返回目录](#辨析题)
+
+### （八）程序教学是合作学习的一种重要形式。
+
+**参考答案：**
+
+这种说法是错误的。
+
+程序教学是一种能让学生根据自己的水平自自学教学性材料（以特定顺序和小步子安排的材料）的个别化教学方法。
+
+其基本做法是把教材内容细分成很多的小单元，构成由易到难的许多层次或小步子，让学生循序渐进，依次进行学习。
+
+合作学习是指学生以主动合作学习的方式代替教师主导教学的一种教学策略。
+
+程序教学不是合作学习的一种重要形式。
+
+因此，题干说法是错误的。
+
+[返回目录](#辨析题)
+
+### （九）教学评价就是对学生学业成绩的评价。
+
+**参考答案：**
+
+这种说法是错误的。
+
+教学评价是指以教学目标为依据，通过一定的标准和手段，对教学活动及其结果进行价值上的判断，即对教学活动及其结果进行视频讲解测量、分析和评定的过程。
+
+教学评价主要包括对学生学业成绩的评价、对教师教学质量的评价和对课程的评价。
+
+题干中片面地将教学评价等同于对学生学业成绩的评价，缩小了教学评价的内涵。
+
+因此，题干说法错误。
+
+[返回目录](#辨析题)
+
+### （十）衡量一节课好坏的唯一标准是看教学方法是否得当。
+
+**参考答案：**
+
+这种说法是错误的。
+
+教师上好一节课的标准包括以下几个方面：①目标明确；②内容正确；③方法得当；④结构合理；⑤语言艺术；⑥板书有序；⑦态度从容；⑧充分发挥学生的主体性。
+
+衡量一节课好坏的标准不但要看教学方法是否得当还要看其他方面，而且上好课最根本的要求是充分发挥学生的主体性，离开了这一点，就不能称为好课。
+
+因此，题干中把教学方法是否得当看作是衡量一节课好坏的唯一标准的说法是错误的。
+
+[返回目录](#辨析题)
+
+### （十一）教学内容是选择教学方法的唯一依据。
+
+**参考答案：**
+
+这种说法是错误的。
+
+选择与运用教学方法的依据：①教学目标和教学任务的要求；②课程性质和特点；③学生年龄特征；④教学时间、设备、条件；⑤教师业务水平、实际经验和个性特点。
+
+此外，教学方法的选择还要考虑教学手段、教学环境、教学原则、学校的实际情况等因素。
+
+因此，题干中把教学内容看作是选择教学方法的唯一依据的说法是错误的。
+
+[返回目录](#辨析题)
