--- a/数据结构与算法（python）/md/线性表/单链表.md
+++ b/数据结构与算法（python）/md/线性表/单链表.md
@@ -1,8 +1,8 @@
-# 单链表
+# 链表
 
 [TOC]
 
-## Python实现
+## 单链表-Python实现
 
 ### 定义表节点类：`LNode`
 
@@ -16,5 +16,23 @@ class LNode:
 
 
 
-### 定义单链表类：
+### 定义单链表类：`LList`
+
+```
+class LList:
+
+    def __init__(self):
+        self._head = LNode(None)
+```
+
+
+
+#### 判断链表是否为空
+
+```
+def is_empty(self):
+    return self._head.next is None
+```
+
+
 
